Update from curriculum repo

--- a/module-1/lesson-1/Financial_Data_Module_1_Lesson_1.ipynb
+++ b/module-1/lesson-1/Financial_Data_Module_1_Lesson_1.ipynb
@@ -79,7 +79,7 @@
    "source": [
     "## **2. Federal Reserve**\n",
     "\n",
-    "Recall from Financial Markets that we read about central banks.  The Federal Reserve is the central bank in the United States. The Fed's output is vast: It includes decisions, research, and printed and spoken market commentaries. These findings are heavily watched and analyzed, as they significantly affect markets. For example, eight times a year, the Federal Reserve has regularly scheduled releases of decisions about interest rates. These meetings result in decisions about interest rates released to the market. Like any other information, this is news that can be expected or unexpected.  If the news is expected, then that information is already priced in the market.  If the news is unexpected, then there are likely to be information shocks that cause market volatility.  In addition, the Fed selects 8 other dates at which they release the minutes of the meetings. These releases contain qualitative rather than quantitative data. These releases can also affect not only interest rates, but stock trading as well, as they indicate the opinions and intended actions of the Fed. For example, in 2019, the Fed decided to cut interest rates three times. This led to a 29% decrease in the S&P 500 during the 4th quarter of 2019.\n",
+    "Recall from Financial Markets that we read about central banks.  The Federal Reserve is the central bank in the United States. The Fed's output is vast: It includes decisions, research, and printed and spoken market commentaries. These findings are heavily watched and analyzed, as they significantly affect markets. For example, eight times a year, the Federal Reserve has regularly scheduled releases of decisions about interest rates. These meetings result in decisions about interest rates released to the market. Like any other information, this is news that can be expected or unexpected.  If the news is expected, then that information is already priced in the market.  If the news is unexpected, then there are likely to be information shocks that cause market volatility.  In addition, the Fed selects 8 other dates at which they release the minutes of the meetings. These releases contain qualitative rather than quantitative data. These releases can also affect not only interest rates, but stock trading as well, as they indicate the opinions and intended actions of the Fed. For example, in 2019, the Fed decided to cut interest rates three times. This led to a 29% increase in the S&P 500 during the 4th quarter of 2019.\n",
     "\n",
     "This gives us our second lesson about data. If we collected data during 2018 and then attempted to extrapolate, we would miss out on key events that affect data. Oftentimes, we need to understand key events that affect our data, as we might consider a data sample as information between those events.\n",
     "\n",
@@ -88,9 +88,6 @@
     "2) 1 group per equity dividend announcement\n",
     "3) groups based on the level of the Fed Reserve rate\n",
     "4) 1 group per Fed fund meeting\n",
-    "\n",
-    "To get data from the Federal Reserve, please visit https://fred.stlouisfed.org/docs/api/api_key.html\n",
-    "From there, you can request a free API key.\n",
     "\n",
     "While the data collected may be the same, there is a recognition that the data as a whole (example 1) may have different properties and can be better analyzed based on an intrinsic property of the company (example 2, earnings) or based on an extrinsic property, like monetary policy (examples 3 and 4). Understanding that our data experiences changes means that we will want to understand markets as systems. It also means we may want to collect and analyze data that is qualitative (e.g., Fed statements)."
    ]
@@ -102,17 +99,6 @@
    "outputs": [],
    "source": [
     "import pandas_datareader as pdr  # access fred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# extract api key: put your key in between the angle brackets <>\n",
-    "myKey = \"xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx\"\n",
-    "fred_api_key = \"<ENTER YOUR API KEY HERE>\""
    ]
   },
   {
@@ -163,7 +149,7 @@
     "\n",
     "If no new rentals occurred within 2 years, how would you collect data to analyze the market?\n",
     "Trade data, where actual trades occurred, would be two years out of date.  \n",
-    "Quote data, where you have recent bids and offers, would be more applicable, since they are more recent. But where is this quote data? Commercial real estate is NOT exchange traded. Commercial real estate does not trade on an over-the-counter market. Therefore, either side does not have a  detailed, accurate, and comprehensive history of bids, offers, and such. In short, there is no publicly accessible limit order book of real estate. These markets could be auction markets or dealer markets, where information is much more difficult to obtain. Indeed, each landlord may deal directly with each prospective tenant.  Alternatively, there may be a middleman (i.e., real estate broker) who ironically makes the market more illiquid by inserting big transaction costs (brokerage fees) that drive the two sides even further apart. In securities markets, there are even dark pools where some details are hidden and others are visible to make markets more equitable by hiding information from advantaged traders, like high-frequency traders.\n",
+    "Quote data, where you have recent bids and offers, would be more applicable, since they are more recent. But where is this quote data? Commercial real estate is NOT exchange traded. Commercial real estate does not trade on an over-the-counter market. Therefore, either side does not have a  detailed, accurate, and comprehensive history of bids, offers, and such. In short, there is no publicly accessible limit order book of real estate. These markets could be auction markets or dealer markets, where information is much more difficult to obtain. Indeed, each landlord may deal directly with each prospective tenant.  In securities markets, there are even dark pools where some details are hidden and others are visible to make markets more equitable by hiding information from advantaged traders, like high-frequency traders.\n",
     "\n",
     "This gives us the third point of financial data: know your source! Exchange-traded data is often the best because it tends to be complete, detailed, available with not only trade information but also quote information. In the case of cryptocurrencies, there can literally be billions of pieces of information, given the top of book, depth of book, type of trade, and many other fields. Considering  the fact that it trades high-frequency, there can be thousands of points per second of trading.\n",
     "Quote data does not reflect where prices occur but does show the supply and demand of participants at a given time. Quote data is one of the most comprehensive types of data because it gives a two-sided view of the market.\n"
