--- a/module-1/lesson-3/Financial_Data_Module_1_Lesson_3.ipynb
+++ b/module-1/lesson-3/Financial_Data_Module_1_Lesson_3.ipynb
@@ -117,11 +117,12 @@
    },
    "outputs": [],
    "source": [
-    "# Using the `pandas_datareader` package, we'll get Netflix stock information from Yahoo Finance\n",
-    "import pandas_datareader as pdr\n",
+    "# Using the `yfinance` package, we'll get Netflix stock information from Yahoo Finance\n",
+    "import yfinance as yf\n",
     "\n",
     "# Request data via Yahoo public API\n",
-    "data = pdr.get_data_yahoo(\"NFLX\")\n",
+    "data = yf.download(\"NFLX\")\n",
+    "\n",
     "# Display Info\n",
     "print(data.info())"
    ]
@@ -133,8 +134,6 @@
    "outputs": [],
    "source": [
     "# If we wanted 1 day's worth of Bitcoin data, we can use the following\n",
-    "import yfinance as yf\n",
-    "\n",
     "BTC = yf.Ticker(\"BTC-USD\")\n",
     "BtcData = BTC.history(period=\"5D\")\n",
     "BtcData.tail(2)"
@@ -330,7 +329,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "682305d9",
    "metadata": {
     "deletable": false,
     "editable": false
