--- a/module-2/lesson-1/Financial_Data_Module_2_Lesson_1.ipynb
+++ b/module-2/lesson-1/Financial_Data_Module_2_Lesson_1.ipynb
@@ -72,14 +72,14 @@
     "# start = datetime.date.today() - datetime.timedelta(days=5*365)\n",
     "# end = datetime.date.today()\n",
     "start = datetime.date(2016, 11, 16)\n",
-    "end = datetime.date(2021, 11, 18)\n",
-    "df = web.DataReader([\"AMZN\", \"F\", \"BTC-USD\"], start, end)[\"Adj Close\"]"
+    "end = datetime.date(2021, 11, 19)\n",
+    "df = web.DataReader([\"AMZN\", \"F\", \"BTC-USD\"], start, end)[\"Adj Close\"]\n",
+    "df[\"AMZN\"] = 20 * df[\"AMZN\"]  # code adapted for recent AMZN stock split"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()"
+    "df.head(10)"
    ]
   },
   {
@@ -177,10 +177,10 @@
     "## 2. Calculating Return on Investment\n",
     "If we invested \\\\$1,000 into each of these assets five years ago, how much money would we have today? To answer this question, we first need to determine how many shares of each stock we could buy with \\\\$1,000 at the start of our date range. For the purposes of this exercise, we will use 11/21/2016 as our starting point because it’s the first weekday of our data set. \n",
     "\n",
-    "From our data above, we can see the starting prices of AMZN, F, and Bitcoin were \\\\$780, \\\\$9.604, and \\\\$739.248 respectively. Now, we need to divide \\\\$1,000 by each of these numbers to see how many shares we will have:\n",
+    "From our data above, we can see the starting prices of AMZN, F, and Bitcoin were \\\\$780, \\\\$8.706, and \\\\$739.248 respectively. Now, we need to divide \\\\$1,000 by each of these numbers to see how many shares we will have:\n",
     "\n",
     "AMZN = 1000/780 = 1.282 shares\n",
-    "F = 1000/9.604 = 104.123 shares\n",
+    "F = 1000/8.706 = 114.863 shares\n",
     "Bitcoin = 1000/739.248 = 1.353 shares\n",
     "It’s a relatively recent phenomenon that retail brokers offer fractional shares, but this tends to be the case nowadays for most commonly used brokers. For this exercise, we will assume we can have fractional shares.\n",
     "\n",
@@ -197,13 +197,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"AMZN = \", 1.282 * 3696.06)\n",
+    "print(\"F = \", 114.863 * 17.82)\n",
+    "print(\"Bitcoin = \", 1.353 * 56942.14)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "From here, we can get our final asset values:\n",
     "\n",
     "- AMZN = 1.282 * 3696.06 = \\\\$4,738.35\n",
-    "- F = 104.123 * 19.56 = \\\\$2,036.65\n",
+    "- F = 114.863 * 17.82 = \\\\$2,046.86\n",
     "- Bitcoin = 1.353 * 56942.14 = \\\\$77,042.72\n",
     "\n",
     "Wow. All three of these assets have at least doubled the initial \\\\$1,000 that was invested. Bitcoin is clearly the standout asset in this case, turning \\\\$1,000 into a whopping \\$77,042.72. While Bitcoin clearly outperformed the other two assets over the last five years, past performance does not necessarily indicate future performance. \n",
@@ -212,16 +223,14 @@
     "\n",
     "Simple Returns Formula\n",
     "\n",
-    "$R_{simple} = \\frac{p_1 - p_0}{p_0}$\n",
+    "$$R_{simple} = \\frac{p_{_1} - p_{_0}}{p_{_0}}$$\n",
     "\n",
-    "where\n",
+    "where $p_{_1}$ = final value, $p_{_0}$ = initial value\n",
     "\n",
-    "$p_1 = \\textrm{final value}$\n",
-    "$p_0 = \\textrm{initial value}$\n",
     "This will be easy in our case since \\$1,000 is the initial value in all three situations:\n",
     "\n",
     "- AMZN = (4738.35 - 1000)/1000 = 3.7384 = 373.84%\n",
-    "- F = (2036.65 - 1000)/1000 = 1.03665 = 103.67%\n",
+    "- F = (2046.86 - 1000)/1000 = 1.0469 = 104.69%\n",
     "- Bitcoin = (77042.72 - 1000)/1000 = 76.04272 = 7,604.27%\n",
     "\n",
     "Bitcoin’s return here is off the charts compared to the other two assets. Bitcoin is a relatively new—some would even say riskier—asset than the other two. Higher risk equals higher potential for rewards, and thus far, investing in Bitcoin has paid off handsomely. "
@@ -243,7 +252,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.join(web.DataReader([\"BLV\"], start, end)[\"Adj Close\"])"
+    "df = df.join(web.DataReader([\"BLV\"], start, end)[\"Adj Close\"])\n",
+    "df.rename(columns={\"Adj Close\": \"BLV\"}, inplace=True)"
    ]
   },
   {
@@ -333,9 +343,9 @@
    "source": [
     "We can run the same analysis on BLV as we did on the above stocks to get the total simple return over a five-year period using a slightly different method. This time, we’ll calculate the simple return and then just multiply that number by 1+ `returnRate`. \n",
     "\n",
-    "BLV 5 year return = (103.02-73.463)/103.02 = 0.2869 = 28.69%\n",
+    "BLV 5 year return = (97.98-68.9)/68.9 = 0.422061 = 42.21%\n",
     "\n",
-    "If we started with \\\\$1,000, after five years, we would’ve ended up with (1+0.2869) * 1000 = \\\\$1,286.90.\n",
+    "If we started with \\\\$1,000, after five years, we would’ve ended up with (1+0.422061) * 1000 = \\\\$1,422.06.\n",
     "\n",
     "While this is still a positive return, it’s a much lower return than what we would’ve gotten with Ford, Amazon, or Bitcoin. This is to be expected for the most part as bonds return a quarterly/annual coupon along with returning the principal. For this reason, bonds (especially government bonds) are considered safer assets than stocks or cryptocurrencies. One major thing to consider is if a company goes bankrupt, you may not get your principal back in a bond. That being said, the same goes for stocks. Bondholders also have less credit risk than stockholders: If you own a bond in Ford and your friend owns Ford stock, but Ford declares bankruptcy tomorrow, the bondholder will be paid off first in the bankruptcy proceedings and the equity owner will only get what’s left over, making bonds a safer investment. \n",
     "\n",
@@ -382,7 +392,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fed479ec",
    "metadata": {
     "deletable": false,
     "editable": false
