--- a/module-2/lesson-2/Financial_Data_Module_2_Lesson_2.ipynb
+++ b/module-2/lesson-2/Financial_Data_Module_2_Lesson_2.ipynb
@@ -45,17 +45,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import pandas_datareader.data as web\n",
-    "\n",
-    "pd.options.display.float_format = \"{:,.3f}\".format\n",
     "import datetime\n",
     "from datetime import date\n",
     "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import pandas_datareader.data as web\n",
     "import seaborn as sns\n",
+    "import yfinance as yfin\n",
     "from IPython.display import VimeoVideo\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "pd.options.display.float_format = \"{:,.3f}\".format\n",
+    "yfin.pdr_override()"
    ]
   },
   {
@@ -83,12 +85,14 @@
     "\n",
     "**The formula for compound interest is:**\n",
     "\n",
-    "$FV = PV (1+i)^n$, where\n",
+    "$$FV = PV (1+i)^n$$\n",
     "\n",
-    "$FV = \\textrm{Future value}$\n",
-    "$PV = \\textrm{Present value}$\n",
-    "$i = \\textrm{Periodic interest rate}$\n",
-    "$n = \\textrm{Number of periods}$\n"
+    "where\n",
+    "\n",
+    "$FV$ = Future value  </br>\n",
+    "$PV$ = Present value  </br>\n",
+    "$i$ = Periodic interest rate  </br>\n",
+    "$n$ = Number of periods  </br>\n"
    ]
   },
   {
@@ -111,9 +115,9 @@
     "# start = datetime.date.today()-datetime.timedelta(365*10)\n",
     "# end = datetime.date.today()\n",
     "start = datetime.date(2011, 11, 25)\n",
-    "end = datetime.date(2021, 11, 22)\n",
+    "end = datetime.date(2021, 11, 23)\n",
     "\n",
-    "prices = web.DataReader([\"^GSPC\", \"^RUT\"], \"yahoo\", start, end)[\"Adj Close\"]\n",
+    "prices = web.DataReader([\"^GSPC\", \"^RUT\"], start, end)[\"Adj Close\"]\n",
     "\n",
     "# Rename column to make names more intuitive\n",
     "prices = prices.rename(columns={\"^GSPC\": \"SP500\", \"^RUT\": \"Russell2000\"})"
@@ -203,14 +207,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(1 + df.mean()) ** (252 * 10) * 1000"
+    "np.exp(df.mean() * 252 * 10) * 1000"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With our future value calculations, we’re predicting a \\\\$1,000 investment in the S&P 500 today would yield a \\\\$4,053.57 future value and for the Russell 2000 a \\\\$3,509.06 future value. \n",
+    "With our future value calculations, we’re predicting a \\\\$1,000 investment in the S&P 500 today would yield a \\\\$4,055.15 future value and for the Russell 2000 a \\\\$3,510.16 future value. \n",
     "\n",
     "While future value is important when comparing investments, we also need to be concerned about how volatile these investment opportunities are. In the next section, we will discuss three different volatility metrics along with how to program them in Python."
    ]
@@ -316,13 +320,11 @@
     "# set figure size\n",
     "plt.figure(figsize=(12, 5))\n",
     "\n",
-    "# plot a simple time series plot\n",
-    "# using seaborn.lineplot()\n",
+    "# plot a simple time series plot using seaborn.lineplot()\n",
     "sns.lineplot(x=\"Date\", y=\"SP500\", data=prices, label=\"Daily S&P 500 Prices\")\n",
     "\n",
-    "\n",
-    "# plot using rolling average\n",
-    "sns.lineplot(x=\"Date\", y=\"SP500 50 day_rolling_avg\", data=prices, label=\"Rollingavg\")"
+    "# plot rolling average\n",
+    "sns.lineplot(x=\"Date\", y=\"SP500 50 day_rolling_avg\", data=prices, label=\"Rollingavg\");"
    ]
   },
   {
@@ -430,14 +432,13 @@
    "source": [
     "def investCompare(startTime, endTime, tickers):\n",
     "    # pull price data from yahoo -- (list(tickers.keys())) = ['^GSPC','^RUT']\n",
-    "    prices = web.DataReader(list(tickers.keys()), \"yahoo\", startTime, endTime)[\n",
-    "        \"Adj Close\"\n",
-    "    ]\n",
+    "    prices = web.DataReader(list(tickers.keys()), startTime, endTime)[\"Adj Close\"]\n",
     "    prices = prices.rename(columns=tickers)\n",
     "    returns = np.log(prices) - np.log(prices.shift(1))\n",
     "    returns = returns.iloc[1:, 0:]\n",
     "\n",
-    "    # pull data into separate DataFrame, 52weeks to just look at the last 365 days of data for calculating our high/low metric\n",
+    "    # pull data into separate DataFrame, 52weeks to just look at the last 365 days of\n",
+    "    # data for calculating our high/low metric\n",
     "    currYear = prices.loc[\n",
     "        date.today() - datetime.timedelta(365) : date.today()  # noqa E203\n",
     "    ]\n",
@@ -450,16 +451,18 @@
     "        columns=[\"MovingAverageVolatility\"],\n",
     "    )\n",
     "\n",
-    "    investments = pd.merge(highLow, MA, on=\"Symbols\")\n",
+    "    investments = pd.merge(highLow, MA, left_index=True, right_index=True)\n",
     "    investments = pd.merge(\n",
     "        investments,\n",
     "        pd.DataFrame(returns.std(), columns=[\"StandardDeviation\"]),\n",
-    "        on=\"Symbols\",\n",
+    "        left_index=True,\n",
+    "        right_index=True,\n",
     "    )\n",
     "    investments = pd.merge(\n",
     "        investments,\n",
     "        pd.DataFrame(100 * returns.mean(), columns=[\"Daily Return Percentage\"]),\n",
-    "        on=\"Symbols\",\n",
+    "        left_index=True,\n",
+    "        right_index=True,\n",
     "    )\n",
     "\n",
     "    return investments.round(3)"
@@ -649,7 +652,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c86cc942",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -678,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
