--- a/module-2/lesson-3/Financial_Data_Module_2_Lesson_3.ipynb
+++ b/module-2/lesson-3/Financial_Data_Module_2_Lesson_3.ipynb
@@ -74,8 +74,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = datetime.date.today() - datetime.timedelta(days=5 * 365)\n",
-    "end = datetime.date.today()\n",
+    "# start = datetime.date.today() - datetime.timedelta(days=5 * 365)\n",
+    "# end = datetime.date.today()\n",
+    "start = datetime.date(2017, 1, 23)\n",
+    "end = datetime.date(2022, 1, 20)\n",
     "df = web.DataReader([\"sp500\", \"NASDAQCOM\", \"CBBTCUSD\"], \"fred\", start, end)"
    ]
   },
@@ -89,13 +91,11 @@
     "2. Returns have statistical properties that are easier to work with. (This will be discussed more in a later lesson.)  \n",
     "\n",
     "The next question is whether to use simple returns or log returns. Using the following variables, we can define the different types of return:\n",
-    "\n",
-    "$p_1 = \\textrm{final value}$\n",
-    "$p_0 = \\textrm{initial value}$\n",
+    "$p_{_1}$ = final value, $p_{_0}$ = initial value.\n",
     "\n",
     "**Simple Returns Formula**\n",
     "\n",
-    "$R_{simple} = \\frac{p_1 - p_0}{p_0}$\n",
+    "$$R_{simple} = \\frac{p_{_1} - p_{_0}}{p_{_0}}$$\n",
     "\n",
     "For example, if we were calculating yearly returns and on day 1, the portfolio was worth \\\\$100 and at the end of the year it was worth \\\\$125, the simple return would be\n",
     "\n",
@@ -105,7 +105,7 @@
     "\n",
     "**Log Returns Formula**\n",
     "\n",
-    "$R_{log} = ln(p_1/p_0)$\n",
+    "$$R_{log} = ln \\Big( \\frac{p_{_1}}{p_{_0}} \\Big)$$\n",
     "\n",
     "For example, if our portfolio was worth \\\\$100 at the start of the year and \\\\$80 by the end of the year, the log return would be:\n",
     "\n",
@@ -184,27 +184,24 @@
     "Square each difference so that they're all positive values\n",
     "Sum up the squared results\n",
     "Divide this by the count of data points minus one\n",
-    "$\\sigma^2 = \\frac{\\sum(x_i - \\overline{x}^2)}{n-1}$\n",
+    "\n",
+    "$$\\sigma^2 = \\frac{\\sum(x_i - \\overline{x})^2}{n-1}$$\n",
     "\n",
     "where\n",
     "\n",
-    "$\\sigma^2 = \\textrm{Sample Variance}$\n",
-    "\n",
-    "$x_i = \\textrm{value of one observation}$\n",
-    "\n",
-    "$\\overline{x} = \\textrm{mean of all observations}$\n",
-    "\n",
-    "$n = \\textrm{number of observations}$\n",
+    "$\\sigma^2$ = Sample Variance </br>\n",
+    "$x_i$ = value of one observation </br>\n",
+    "$\\overline{x}$ = mean of all observations </br>\n",
+    "$n$ = number of observations </br>\n",
     "\n",
     "The larger the variance, the further spread out it is from the mean. Variance treats all deviations from the mean the same way, regardless of whether they are less than or greater than the mean. A variance of zero would indicate that each data point is the same.  \n",
     "\n",
     "Standard deviation is easy to calculate once you have the variance. All you have to do is take the square root of the variance: \n",
     "\n",
-    "$\\sigma = \\sqrt{\\sigma^2}$\t\n",
+    "$$\\sigma = \\sqrt{\\sigma^2}$$\n",
     "\n",
     "where \n",
-    "\n",
-    "$\\sigma = \\textrm{standard deviation}$\n",
+    "$\\sigma$ = standard deviation\n",
     "\n",
     "Standard deviation is another commonly used statistical measure to quantify market volatility. You would expect newer growth stocks to have higher standard deviations and more established blue-chip stocks to have lower standard deviations of returns. We will illustrate this by comparing daily returns from the last five years of the S&P 500 and NASDAQ, as well as Bitcoin prices. While Bitcoin isn't necessarily a growth stock, it's still very new compared to the S&P 500 and NASDAQ, so you would expect to see bigger swings in the price when compared to those two stock indices.\n",
     "\n",
@@ -276,19 +273,15 @@
     "## 3. Covariance and Correlation \n",
     "We are able to compare the performance of stocks that have different price levels by using returns and standard deviation. How can we look at the joint performance of two stocks? For this, we turn to covariance and correlation. We will start with covariance: \n",
     "\n",
-    "$\\frac{\\sum(x_{i}-\\overline{x})(y_{i}-\\overline{y})}{N-1}$\n",
+    "$$\\frac{\\sum(x_{i}-\\overline{x})(y_{i}-\\overline{y})}{N-1}$$\n",
     "\n",
     "where\n",
     "\n",
-    "$x_i = \\textrm{value of one observation of x}$\n",
-    "\n",
-    "$y_i = \\textrm{value of one observation of y}$\n",
-    "\n",
-    "$\\overline{x} = \\textrm{mean of x}$\n",
-    "\n",
-    "$\\overline{y} = \\textrm{mean of y}$\n",
-    "\n",
-    "$N = \\textrm{number of observations}$\n",
+    "$x_i$ = value of one observation of $x$  </br>\n",
+    "$y_i$ = value of one observation of $y$ </br>\n",
+    "$\\overline{x}$ = mean of $x$ </br>\n",
+    "$\\overline{y}$ = mean of $y$ </br>\n",
+    "$N$ = number of observations </br>\n",
     "\n",
     "\n",
     "**Covariance** provides us some insight into how two variables move together. A positive covariance between stock returns would indicate that when one stock goes up, so does the other and vice versa. A negative covariance would mean that the two stocks move inversely, i.e., when one goes up, the other goes down.  \n",
@@ -315,15 +308,13 @@
     "### 3.2 Using the Pearson Correlation Coefficient Formula\n",
     "The Pearson correlation coefficient is a measure of the strength of a linear relationship between two variables. The formula is as follows: \n",
     "\n",
-    "$\\rho_{X,Y} = \\frac{cov(X,Y)}{\\sigma_{X} \\sigma_{Y}}$\n",
+    "$$\\rho_{_{X,Y}} = \\frac{cov(X,Y)}{\\sigma_{_{X}} \\sigma_{_{Y}}}$$\n",
     "\n",
     "where\n",
     "\n",
-    "$cov = \\textrm{Covariance}$\n",
-    "\n",
-    "$\\sigma_{X} = \\textrm{Standard Deviation of X}$\n",
-    "\n",
-    "$\\sigma_{Y} = \\textrm{Standard Deviation of Y}$\n",
+    "$cov$ = Covariance </br>\n",
+    "$\\sigma_{_{X}}$ = Standard Deviation of $X$ </br>\n",
+    "$\\sigma_{_{Y}}$ = Standard Deviation of $Y$ </br>\n",
     "\n",
     "Correlation is used in statistics to quantify the degree to which two variables move in a linear relation to each other. Correlation can range from –1 to 1 inclusive. A correlation of 1 means perfect correlation; the variables move exactly in tandem with one another. Perfect tandem for positive correlation means that if we know variable X increases, then variable Y also increases.  A correlation of –1 indicates perfect inverse correlation. This is also perfect tandem, but in the opposite direction.  Here, if we know variable X increases, then variable Y decreases. A correlation of 0 indicates there is no distinguishable relationship between two variables; therefore, it would be impossible to make predictions of one variable given the other. In this case, if we know variable X increases, then variable Y is equally likely to increase or decrease.\n",
     "\n",
@@ -347,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All of the variables have a positive relationship, which we saw with the covariance matrix previously. Here, we can also see the strength of the relationships: The S&P 500 is strongly correlated with NASDAQ since we've obtained a 0.944 Pearson's correlation coefficient. The relationship between NASDAQ and Bitcoin is still positive but much weaker with a 0.192 Pearson's correlation coefficient. \n",
+    "All of the variables have a positive relationship, which we saw with the covariance matrix previously. Here, we can also see the strength of the relationships: The S&P 500 is strongly correlated with NASDAQ since we've obtained a 0.943 Pearson's correlation coefficient. The relationship between NASDAQ and Bitcoin is still positive but much weaker with a 0.205 Pearson's correlation coefficient. \n",
     "\n",
     "When we chart the returns between these variables, we can see evidence of the correlations above, visually:"
    ]
@@ -363,8 +354,7 @@
     ")\n",
     "\n",
     "plt.axvline(0, 0, 1, dash_capstyle=\"butt\", linestyle=\"--\", color=\"grey\")\n",
-    "\n",
-    "plt.plot([min(df.SP500), max(df.SP500)], [0, 0], linestyle=\"--\", color=\"grey\")"
+    "plt.plot([min(df.SP500), max(df.SP500)], [0, 0], linestyle=\"--\", color=\"grey\");"
    ]
   },
   {
@@ -385,15 +375,14 @@
     ")\n",
     "\n",
     "plt.axvline(0, 0, 1, dash_capstyle=\"butt\", linestyle=\"--\", color=\"grey\")\n",
-    "\n",
-    "plt.plot([min(df.SP500), max(df.SP500)], [0, 0], linestyle=\"--\", color=\"grey\")"
+    "plt.plot([min(df.SP500), max(df.SP500)], [0, 0], linestyle=\"--\", color=\"grey\");"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The relationship here is much more scattered even though the relationship is still slightly positive. These were charted using the seaborn `regplot` method, which also shows confidence intervals around the regression line, as seen above.  \n",
+    "The relationship here is much more scattered even though the relationship is still slightly positive. These were charted using the seaborn `regplot()` method, which also shows confidence intervals around the regression line, as seen above.  \n",
     "\n",
     "In the next video, we will go over how to leverage Python libraries in order to easily calculate correlation and covariance given an array of returns."
    ]
@@ -428,37 +417,36 @@
     "### 3.3 The Sharpe Ratio \n",
     "The Sharpe ratio allows an investor to understand the relationship between the return of an investment in relation to its volatility. The formula is as follows: \n",
     "\n",
-    "$\\textrm{Sharpe Ratio} = \\tfrac{R_p - R_f}{\\sigma_p}$\n",
+    "$$\\text{Sharpe Ratio} = \\frac{R_p - R_f}{\\sigma_p}$$\n",
     "\n",
     "where\n",
     "\n",
-    "$R_p = \\textrm{Return of the portfolio}$\n",
+    "$R_p$ = Return of the portfolio </br>\n",
+    "$R_f$ = Risk-free Rate </br>\n",
+    "$\\sigma_p$ = Standard Deviation of the Portfolio </br>\n",
     "\n",
-    "$R_f = \\textrm{Risk-free Rate}$\n",
-    "\n",
-    "$\\sigma_p = \\textrm{Standard Deviation of the Portfolio}$\n",
     "\n",
     "In many cases with interest rates so low, investors will assume the risk-free rate to be 0, making the ratio: \n",
     "\n",
-    "$\\textrm{Sharpe Ratio} = \\frac{R_p}{\\sigma_p}$\n",
+    "$$\\text{Sharpe Ratio} = \\frac{R_p}{\\sigma_p}$$\n",
     "\n",
-    "Notice anything about the denominator? Yes, that’s right—we use the standard deviation here to represent risk.  \n",
+    "Notice anything about the denominator? Yes, that’s right - we use the standard deviation here to represent risk.  \n",
     "\n",
     "This measure is used as a way of scaling the return of an investment depending on how much risk is taken. In other words, the higher the standard deviation, the more the risk-weighted return is reduced. Let’s use the same example as above with S&P 500 and Bitcoin daily returns over the last five years.\n",
     "\n",
-    "Average daily return of S&P 500: **0.000617 = 6.17 bp**\n",
+    "Average daily return of S&P 500 = 0.000543 = 5.43 bp\n",
     "\n",
-    "Average daily return of Bitcoin: **0.003626 = 36.26 bp**\n",
+    "Average daily return of Bitcoin = 0.003023 = 30.23 bp\n",
     "\n",
     "Using standard deviations from above and assuming the risk-free rate = 0, we can calculate the Sharpe ratio of these investments using: \n",
     "\n",
-    "S&P 500: 0.000617/0.012115 = **0.0509** \n",
+    "Sharpe Ratio of S&P 500 = 0.000543 / 0.012244 = 0.0443 \n",
     "\n",
-    "Bitcoin: 0.003626/0.050088 = **0.0724** \n",
+    "Sharpe Ratio of Bitcoin = 0.003023 / 0.049805 = 0.0607\n",
     "\n",
     "According to the Sharpe ratio, over the last five years, Bitcoin has had a better risk-adjusted return. This is interesting because even though Bitcoin had a higher standard deviation of returns, the higher return was enough for the Sharpe ratio to deem it the better investment from a risk/return perspective.  \n",
     "\n",
-    "One major flaw with the Sharpe ratio is that it uses the standard deviation of returns in the denominator, which assumes that returns are normally distributed. This may not always—and is actually rarely—the case. This will be explored further in a future lesson.  "
+    "One major flaw with the Sharpe ratio is that it uses the standard deviation of returns in the denominator, which assumes that returns are normally distributed. This may not always - and is actually rarely - the case. This will be explored further in a future lesson.  "
    ]
   },
   {
@@ -495,17 +483,15 @@
     "## 4. Semivariance \n",
     "Semivariance, a.k.a. downside risk, is a more refined version of a standard deviation. Standard deviation looks at both the upside and downside risk of an investment. Most investors, unless you’re trading short, care much more about the downside risk than the upside risk. In other words, if you bought a stock and are looking at the Sharpe ratio, you wouldn’t want this number to be penalized for how far it moves to the upside. Most of the time, an investor will be much more concerned with the downside risk of a stock.  \n",
     "\n",
-    "$\\textrm{Semivariance} = \\tfrac{1}{n} * \\sum_{r_i < \\overline{r}}^{n} (r_i - \\overline{r})^2$\n",
+    "$$\\text{Semivariance} = \\frac{1}{n} \\sum_{r_i < \\overline{r}}^{n} (r_i - \\overline{r})^2$$\n",
     "\n",
     "where\n",
     "\n",
-    "$r_i = \\textrm{value of one observation}$\n",
+    "$r_i$ = value of one observation  </br>\n",
+    "$\\overline{r}$ = mean of all observations  </br>\n",
+    "$n$ = number of observations\n",
     "\n",
-    "$\\overline{r} = \\textrm{mean of all observations}$\n",
-    "\n",
-    "$n = \\textrm{number of observations}$\n",
-    "\n",
-    "Semivariance can be thought of as the standard deviation when only looking at returns below 0. This can be used to estimate the average loss a portfolio could incur, assuming normal distributions of returns.  \n",
+    "Semivariance can be thought of as an estimator of variance of the returns that are less than their average. This can be used to estimate the average loss a portfolio could incur, assuming normal distributions of returns.  \n",
     "\n",
     "Conversely, if we are short a security, we could still use semivariance, but this time, it would focus on the returns that are positive. If we are short, drops in the price create upside, so we would not want to penalize this volatility in our Sharpe ratio. However, if there are large deviations in the upward direction, then this will contribute to semivariance.\n",
     "\n",
@@ -518,7 +504,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[df[\"SP500\"] < df[\"SP500\"].mean()][\"SP500\"].std()"
+    "sp500mean = df[\"SP500\"].mean()\n",
+    "sp500_semivariance = ((df[df[\"SP500\"] < sp500mean][\"SP500\"] - sp500mean) ** 2).mean()\n",
+    "sp500_semivariance"
    ]
   },
   {
@@ -527,7 +515,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[df[\"Bitcoin\"] < df[\"Bitcoin\"].mean()][\"Bitcoin\"].std()"
+    "BTCmean = df[\"Bitcoin\"].mean()\n",
+    "BTC_semivariance = ((df[df[\"Bitcoin\"] < BTCmean][\"Bitcoin\"] - BTCmean) ** 2).mean()\n",
+    "BTC_semivariance"
    ]
   },
   {
@@ -541,7 +531,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8557bdd",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -570,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
