--- a/module-2/lesson-4/Financial_Data_Module_2_Lesson_4.ipynb
+++ b/module-2/lesson-4/Financial_Data_Module_2_Lesson_4.ipynb
@@ -52,8 +52,11 @@
     "import pandas as pd\n",
     "import pandas_datareader.data as web\n",
     "import seaborn as sns\n",
+    "import yfinance as yfin\n",
     "from matplotlib import pyplot as plt\n",
-    "from scipy import stats"
+    "from scipy import stats\n",
+    "\n",
+    "yfin.pdr_override()"
    ]
   },
   {
@@ -78,12 +81,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = datetime.date.today() - datetime.timedelta(365 * 20)\n",
-    "end = datetime.date.today()\n",
-    "prices = web.DataReader([\"^GSPC\"], \"yahoo\", start, end)[\"Adj Close\"]\n",
+    "# start = datetime.date.today() - datetime.timedelta(365 * 20)\n",
+    "# end = datetime.date.today()\n",
+    "end = datetime.date(2021, 11, 20)\n",
+    "start = end - datetime.timedelta(365 * 20)\n",
+    "\n",
+    "prices = pd.DataFrame(web.DataReader([\"^GSPC\"], start, end)[\"Adj Close\"])\n",
     "\n",
     "# Rename column to make names more intuitive\n",
-    "prices = prices.rename(columns={\"^GSPC\": \"SP500\"})\n",
+    "prices = prices.rename(columns={\"Adj Close\": \"SP500\"})\n",
     "df = np.log(prices) - np.log(prices.shift(1))\n",
     "df = df.iloc[1:, 0:]"
    ]
@@ -110,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're getting about 52.7% of data points being greater than the mean, which shows we have a slightly positive skew to this dataset. We can't rule out symmetric returns based on this since it is only a sample of data and is reasonably close to the 50% mark. This makes it hard to say for certain whether S&P 500 returns are symmetric or not, but it is still a reasonable assumption to make here. Also, keep in mind there should be a slight bias towards positive returns anyways, if for no other reason than some drift from inflation."
+    "We're getting about 52.6% of data points being greater than the mean, which shows we have a slightly negative skew to this dataset. We can't rule out symmetric returns based on this since it is only a sample of data and is reasonably close to the 50% mark. This makes it hard to say for certain whether S&P 500 returns are symmetric or not, but it is still a reasonable assumption to make here. Also, keep in mind there should be a slight bias towards positive returns anyways, if for no other reason than some drift from inflation."
    ]
   },
   {
@@ -127,15 +133,18 @@
    "outputs": [],
    "source": [
     "vols = pd.DataFrame(df.SP500.rolling(50).std()).rename(columns={\"SP500\": \"S&P 500 STD\"})\n",
+    "\n",
     "# set figure size\n",
     "plt.figure(figsize=(12, 5))\n",
+    "\n",
     "# plot using rolling average\n",
     "sns.lineplot(\n",
     "    x=\"Date\",\n",
     "    y=\"S&P 500 STD\",\n",
     "    data=vols,\n",
     "    label=\"S&P 500 50 day standard deviation rolling avg\",\n",
-    ")"
+    ")\n",
+    "plt.show()"
    ]
   },
   {
@@ -163,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.hist(bins=100)"
+    "df.hist(bins=100);"
    ]
   },
   {
@@ -186,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use the `normaltest` method here to determine if the sample data could fit a normal distribution. This method uses D’Agostino and Pearson’s normality test, which combines skew and kurtosis to produce an omnibus test of normality.\n",
+    "We can use the `normaltest()` method here to determine if the sample data could fit a normal distribution. This method uses D’Agostino and Pearson’s normality test, which combines skew and kurtosis to produce an omnibus test of normality.\n",
     "\n",
     "The null hypothesis of this test is that the sample data fits a normal distribution. Let's assume we want to be 90% confident this data fits a normal distribution. We can compare this to the p-value to see if it's greater than 90%. In this case, the value, 2.43e-252, is extremely small, which leads us to reject the null hypothesis that this data fits a normal distribution."
    ]
@@ -198,7 +207,7 @@
     "### 2.2 Testing Skewness and Kurtosis\n",
     "As one added testing step, we can test the skewness and kurtosis of our distribution using the Jarque-Bera test. The test statistic will always be greater than zero. The further the test statistic is from zero, the more likely the sample data does not match a normal distribution.\n",
     "\n",
-    "Lucky for us, Python has another library for us to use here which really simplifies the analysis. From the `scipy.stats` library, we can use the `jarque_bera` method directly to our data to get test statistic \n"
+    "Lucky for us, Python has another library for us to use here which really simplifies the analysis. From the `scipy.stats` library, we can use the `jarque_bera()` method directly to our data to get test statistic \n"
    ]
   },
   {
@@ -228,7 +237,7 @@
     "\n",
     "To determine how many standard deviations away from the mean a specific number is, we need to use \n",
     "\n",
-    "$\\tfrac{X - \\bar{X}}{\\textrm{Sample standard deviation}}$\n",
+    "$$\\frac{X - \\bar{X}}{\\text{Sample standard deviation}}$$\n",
     "\n",
     " Let's do this for the min and max of the sample data:"
    ]
@@ -245,6 +254,15 @@
     "    \"Min return of sample data is %.4f and the maximum return of sample data is %.4f\"\n",
     "    % (dfMin, dfMax)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.SP500.max()"
    ]
   },
   {
@@ -278,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Over the last 20 years, S&P 500 has had a maximum daily return of 10.96% and a minimum daily return of -12.77%. If we use the formula to determine standard deviations from the mean, we get -10.5 and 8.9 standard deviations away from the mean for the minimum and maximum, respectively. These standard deviations are humongous when compared to the normal distribution. We can see this analytically when we plug in the z score to the `norm.cdf` method to determine the probability this value could be in a normal distribution:"
+    "Over the last 20 years, S&P 500 has had a maximum daily return of 10.96% and a minimum daily return of -12.77%. If we use the formula to determine standard deviations from the mean, we get -10.5 and 8.9 standard deviations away from the mean for the minimum and maximum, respectively. These standard deviations are humongous when compared to the normal distribution. We can see this analytically when we plug in the z score to the `norm.cdf()` method to determine the probability this value could be in a normal distribution:"
    ]
   },
   {
@@ -385,7 +403,7 @@
     "\n",
     "One potential alternative distribution we could use to forecast stock returns is the Student's t-distribution. This is very similar to a normal distribution except it has heavier tails. Theoretically, this sounds perfect for daily returns based on what we’ve seen up to this point.\n",
     "\n",
-    "Since we have 5,031 data points, we have 5,030 degrees of freedom. We can plug these numbers right into `stats.t.rvs` method to see a sample t-distribution and chart it:"
+    "Since we have 5,031 data points, we have 5,030 degrees of freedom. We can plug these numbers right into `stats.t.rvs()` method to see a sample t-distribution and chart it:"
    ]
   },
   {
@@ -394,6 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.random.seed(555)\n",
     "stats.t.rvs(df=5030, size=5000)"
    ]
   },
@@ -432,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we get a p-value of 0.866, which means we would reject the null hypothesis at a 95% confidence level that these values come from the same data as the sample. There are two main things to point out here:\n",
+    "Here, we get a p-value of 0.836, which means we would reject the null hypothesis at a 95% confidence level that these values come from the same data as the sample. There are two main things to point out here:\n",
     "\n",
     "* While the p-value is less than 0.95, it’s still not too far off, and it's magnitudes closer to being true than the normal distribution we showed before. This indicates that this distribution is much better to use when modeling daily returns than the normal distribution. \n",
     "* This p-value is highly reliant on the sample data we have here. Every time we run that cell, we get different sample data, which also means different p-values. "
@@ -458,7 +477,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb2cab90",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -487,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
