--- a/module-3/lesson-2/Financial_Data_Module_3_Lesson_2.ipynb
+++ b/module-3/lesson-2/Financial_Data_Module_3_Lesson_2.ipynb
@@ -50,7 +50,10 @@
     "import pandas as pd\n",
     "import pandas_datareader.data as web\n",
     "import seaborn as sns\n",
-    "from IPython.display import VimeoVideo"
+    "import yfinance as yfin\n",
+    "from IPython.display import VimeoVideo\n",
+    "\n",
+    "yfin.pdr_override()"
    ]
   },
   {
@@ -69,11 +72,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = datetime.date(2016, 11, 29)\n",
-    "end = datetime.date(2021, 11, 28)\n",
     "# start = datetime.date.today()-datetime.timedelta(365*10)\n",
     "# end = datetime.date.today()\n",
-    "prices = web.DataReader([\"JPM\", \"BTC-USD\"], \"yahoo\", start, end)[\"Adj Close\"]\n",
+    "start = datetime.date(2016, 11, 29)\n",
+    "end = datetime.date(2021, 11, 28)\n",
+    "\n",
+    "prices = web.DataReader([\"JPM\", \"BTC-USD\"], start, end)[\"Adj Close\"]\n",
     "prices = prices.rename(columns={\"BTC-USD\": \"BTC\"})\n",
     "prices = prices.dropna()\n",
     "returns = prices.pct_change()"
@@ -185,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can chart the two assets we've invested in along with the value of our portfolio. First, we need to get the data into a more usable format for seaborn's `lineplot` method. We use the pandas `melt` method to make our table more horizontal:"
+    "We can chart the two assets we've invested in along with the value of our portfolio. First, we need to get the data into a more usable format for seaborn's `lineplot()` method. We use the pandas `melt()` method to make our table more horizontal:"
    ]
   },
   {
@@ -194,7 +198,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.lineplot(x=\"Date\", y=\"value\", hue=\"Symbols\", data=portValues.melt(id_vars=[\"Date\"]));"
+    "sns.lineplot(\n",
+    "    x=\"Date\", y=\"value\", hue=\"variable\", data=portValues.melt(id_vars=[\"Date\"])\n",
+    ");"
    ]
   },
   {
@@ -265,20 +271,19 @@
     "In order to try to minimize portfolio variance, a good starting point is the formula itself to calculate variance with a two-asset portfolio.\n",
     "\n",
     "\n",
-    "$\\textrm{Portfolio Variance} = w_x^2 \\sigma_x^2 + w_y^2 \\sigma_y^2 + 2w_x w_y Cov_{x,y}$\n",
+    "$$\\text{Portfolio Variance} = w_x^2 \\sigma_x^2 + w_y^2 \\sigma_y^2 + 2 w_x w_y Cov_{x,y}$$\n",
     "\n",
     "where\n",
     "\n",
-    "* $w_x$ = portfolio weight of asset x\n",
-    "* $w_y$ = portfolio weight of asset y\n",
-    "* $\\sigma_x$ = standard deviation of asset x\n",
-    "* $\\sigma_y$ = standard deviation of asset y\n",
-    "* $Cov_{x,y}$ = Covariance of the two assets\n",
+    "$w_x$ = portfolio weight of asset $x$  </br>\n",
+    "$w_y$ = portfolio weight of asset $y$  </br>\n",
+    "$\\sigma_x$ = standard deviation of asset $x$  </br>\n",
+    "$\\sigma_y$ = standard deviation of asset $y$  </br>\n",
+    "$Cov_{x,y}$ = Covariance of the two assets\n",
     "\n",
     "Also, building off the previous lesson this means that\n",
     "\n",
-    "$\\textrm{Portfolio Standard Deviation} = \\sqrt{\\textrm{Portfolio Variance}}$\n",
-    "\n",
+    "$$\\text{Portfolio Standard Deviation} = \\sqrt{\\text{Portfolio Variance}}$$\n",
     "\n",
     "\n",
     "With this information in mind, there are 3 things we can do to minimize variance.\n",
@@ -295,15 +300,15 @@
     "### 2.2 Covariance-Correlation Relationship\n",
     "If you recall from a previous lesson, the formula for correlation is:\n",
     "\n",
-    "$\\rho_{x,y} = \\frac{Cov_{x,y}}{\\sigma_x*\\sigma_y}$\n",
+    "$$\\rho_{_{x,y}} = \\frac{\\text{Cov}_{x,y}}{\\sigma_x \\sigma_y}$$\n",
     "\n",
     "We can rearrange this to get the covariance formula:\n",
     "\n",
-    "$Cov_{x,y} = \\rho_{x,y}\\sigma_x\\sigma_y$\n",
+    "$\\text{Cov}_{x,y} = \\rho_{_{x,y}}\\sigma_x \\sigma_y$\n",
     "\n",
     "Then, we can plug this back into our portfolio variance formula:\n",
     "\n",
-    "$\\textrm{Portfolio Variance} = w_x^2 \\sigma_x^2 + w_y^2 \\sigma_y^2 + 2w_x w_y \\rho_{x,y}\\sigma_x\\sigma_y$\n",
+    "$$\\text{Portfolio Variance} = w_x^2 \\sigma_x^2 + w_y^2 \\sigma_y^2 + 2 w_x w_y \\rho_{_{x,y}} \\sigma_x \\sigma_y$$\n",
     "\n",
     "\n",
     "These formulas are basically to show that we need to minimize correlations in order to minimize portfolio variance. Owning uncorrelated assets illustrates the efficient benefits of diversification. Let's write some reusable functions to sum up the work we did above and really display how this works with a few examples "
@@ -314,9 +319,9 @@
    "metadata": {},
    "source": [
     "#### 2.2.1 Writing Functions - Reusable Code\n",
-    "A common tenet in programming is to wrap any code you're going to need to use multiple times into a function. In our case, we've needed to calculate daily returns over a date range many times throughout this course. We will wrap the core code for this into a function called `getReturns`.\n",
+    "A common tenet in programming is to wrap any code you're going to need to use multiple times into a function. In our case, we've needed to calculate daily returns over a date range many times throughout this course. We will wrap the core code for this into a function called `getReturns()`.\n",
     "\n",
-    "`getReturns` takes 3 arguments:\n",
+    "`getReturns()` takes 3 arguments:\n",
     "* `startTime` - `datetime`\n",
     "* `endTime` - `datetime`\n",
     "* `tickers` - dict of values where key is the yahoo ticker for a security and values are the displayed names in the output"
@@ -330,9 +335,7 @@
    "source": [
     "def getReturns(startTime, endTime, tickers):\n",
     "    # pull price data from yahoo -- (list(tickers.keys())) = ['^GSPC','^RUT']\n",
-    "    prices = web.DataReader(list(tickers.keys()), \"yahoo\", startTime, endTime)[\n",
-    "        \"Adj Close\"\n",
-    "    ]\n",
+    "    prices = web.DataReader(list(tickers.keys()), startTime, endTime)[\"Adj Close\"]\n",
     "    prices = prices.rename(columns=tickers)\n",
     "    prices = prices.dropna()\n",
     "    return prices.pct_change()"
@@ -363,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that that's settled, onto the good stuff. We can now use our `getReturns` function to easily calculate correlations of different assets. Let's look at the correlations of the two assets we've used thus far along with introducing a Bond ETF. We will use the bond ETF, BLV, that we used in a previous lesson:"
+    "Now that that's settled, onto the good stuff. We can now use our `getReturns()` function to easily calculate correlations of different assets. Let's look at the correlations of the two assets we've used thus far along with introducing a Bond ETF. We will use the bond ETF, BLV, that we used in a previous lesson:"
    ]
   },
   {
@@ -385,9 +388,9 @@
    "source": [
     "We can see that the BLV has a very small correlation with Bitcoin and even a negative correlation with JP Morgan.\n",
     "\n",
-    "We will expand upon this further and use our `getReturns` function in a new `compareRisk`.\n",
+    "We will expand upon this further and use our `getReturns()` function in a new `compareVariance()`.\n",
     "\n",
-    "`compareRisk` will take the same parameters of `getReturns` along with a list of weights so that we can calculate daily portfolio returns and volatility metrics\n"
+    "`compareVariance()` will take the same parameters of `getReturns()` along with a list of weights so that we can calculate daily portfolio returns and volatility metrics\n"
    ]
   },
   {
@@ -424,7 +427,7 @@
     "    datetime.date(2016, 11, 29),\n",
     "    datetime.date(2021, 11, 28),\n",
     "    {\"JPM\": \"JPM\", \"BTC-USD\": \"Bitcoin\"},\n",
-    "    [0.652, 0.348],\n",
+    "    [0.357, 0.643],\n",
     ")"
    ]
   },
@@ -432,7 +435,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Like mentioned previously, one simple way to reduce variance could be to skew the weight of your investment more towards the less volatile side. In this case, we'll increase our weight in JPM from 0.652 to 0.8. By doing this, the volatility of our portfolio is the same as that of JPM, but we get double the returns of JPM since Bitcoin returns are still factored in."
+    "Like mentioned previously, one simple way to reduce variance could be to skew the weight of your investment more towards the less volatile side. In this case, we'll increase our weight in JPM from 0.643 to 0.8. By doing this, the volatility of our portfolio is the same as that of JPM, but we get double the returns of JPM since Bitcoin returns are still factored in."
    ]
   },
   {
@@ -445,7 +448,7 @@
     "    datetime.date(2016, 11, 29),\n",
     "    datetime.date(2021, 11, 28),\n",
     "    {\"JPM\": \"JPM\", \"BTC-USD\": \"Bitcoin\"},\n",
-    "    [0.8, 0.2],\n",
+    "    [0.2, 0.8],\n",
     ")"
    ]
   },
@@ -568,7 +571,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3bac103",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -597,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
