--- a/module-3/lesson-4/Financial_Data_Module_3_Lesson_4.ipynb
+++ b/module-3/lesson-4/Financial_Data_Module_3_Lesson_4.ipynb
@@ -56,8 +56,11 @@
     "import pandas as pd\n",
     "import pandas_datareader.data as web\n",
     "import seaborn as sns\n",
+    "import yfinance as yfin\n",
     "from IPython.display import VimeoVideo\n",
-    "from scipy import stats"
+    "from scipy import stats\n",
+    "\n",
+    "yfin.pdr_override()"
    ]
   },
   {
@@ -89,7 +92,7 @@
     "\n",
     "This is probably the simplest and most intuitive method of calculating Value at Risk. In short, historical returns are sorted from lowest to highest on an asset or portfolio. Let’s say you wanted to calculate the daily Value at Risk on an equity with a 95% confidence interval. Assuming we can look at the last thousand days of data for this stock, we would take the daily returns and sort them from lowest to highest. From here, we would take the return from the 5th percentile of the data. In this case, with 1,000 days of data, it would be the 50th (0.05*1000) worst daily return from these thousand days. Let’s say the 50th worst day had a –4% return. From this, we can assume that the daily VaR for this stock with a 95% confidence interval is –4%. Building on that, if we were to invest \\$1,000 in said stock, we would expect the worst daily loss to be:\n",
     "\n",
-    "$-0.04*1000 = -\\$40,  \\textrm{with a 95% confidence interval}$\n",
+    "-0.04*1000 = -\\$40  with a 95% confidence interval\n",
     "\n",
     "Considerations for this method:\n",
     "\n",
@@ -126,14 +129,10 @@
     "start = datetime.date(2016, 1, 1)\n",
     "end = datetime.date(2021, 11, 28)\n",
     "# end = datetime.date.today()\n",
-    "try:\n",
-    "    prices = web.DataReader([\"BTC-USD\"], \"yahoo\", start, end)[\"Adj Close\"]\n",
-    "except:  # noqa E722\n",
-    "    # If there are connectivity issues, use backup data\n",
-    "    prices = pd.read_pickle(\"data/btc-usd.pkl\")\n",
     "\n",
+    "prices = pd.DataFrame(web.DataReader([\"BTC-USD\"], start, end)[\"Adj Close\"])\n",
     "returns = prices.pct_change()\n",
-    "returns = returns.rename(columns={\"BTC-USD\": \"Bitcoin\"})\n",
+    "returns = returns.rename(columns={\"Adj Close\": \"Bitcoin\"})\n",
     "returns = returns.dropna()"
    ]
   },
@@ -146,7 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "sns.histplot(data=returns)"
+    "sns.histplot(data=returns);"
    ]
   },
   {
@@ -157,7 +156,7 @@
    "source": [
     "It may be a little hard to see, but the graph shows a lot more to the left of 0 than to the right of 0, indicating there may have been some big losses over the last 5 years. Let's calculate the historical VaR from this data.\n",
     "\n",
-    "We need to can use numpy's *percentile* method in order to easily calculate this for us. Using this function allows us to skip the sorting step as it is already factored into the logic. We can define a function below in order to look at various confidence intervals. This function `getHistoricalVar` takes two arguments:\n",
+    "We need to can use numpy's *percentile* method in order to easily calculate this for us. Using this function allows us to skip the sorting step as it is already factored into the logic. We can define a function below in order to look at various confidence intervals. This function `getHistoricalVar()` takes two arguments:\n",
     "1. a series of daily returns\n",
     "2. a confidence level, 95 for example, would correspond to 95% confidence"
    ]
@@ -173,7 +172,8 @@
     "def getHistoricalVar(returns, confidenceLevel):\n",
     "    var = 100 * np.percentile(returns, 100 - confidenceLevel)\n",
     "    print(\n",
-    "        \"With %.2f%% percent confidence, we can say the most our portfolio will lose in a day is %.3f%% using historical VaR\"\n",
+    "        \"With %.2f%% percent confidence, we can say the most our \\\n",
+    "        \\nportfolio will lose in a day is %.3f%% using historical VaR\"\n",
     "        % (confidenceLevel, var)\n",
     "    )"
    ]
@@ -274,7 +274,9 @@
     "start = datetime.date(2016, 1, 1)\n",
     "end = datetime.date(2021, 11, 28)\n",
     "# end = datetime.date.today()\n",
-    "prices = web.DataReader([\"BLV\"], \"yahoo\", start, end)[\"Adj Close\"]\n",
+    "\n",
+    "prices = pd.DataFrame(web.DataReader([\"BLV\"], start, end)[\"Adj Close\"])\n",
+    "prices = prices.rename(columns={\"Adj Close\": \"BLV\"})\n",
     "returns = prices.pct_change()\n",
     "returns = returns.dropna()"
    ]
@@ -309,7 +311,7 @@
     "id": "HoCnYUL2H4cI"
    },
    "source": [
-    "While Bitcoin's 95% VaR and CVaR over the last five years is about -6% and -9% respectively, the bond index, BLV, has -.93% and -1.5% for the same metrics. This goes to show how much more downside risk an asset like Bitcoin holds when compared to bonds.\n",
+    "While Bitcoin's 95% VaR and CVaR over the last five years is about -6% and -9% respectively, the bond index, BLV, has -0.93% and -1.5% for the same metrics. This goes to show how much more downside risk an asset like Bitcoin holds when compared to bonds.\n",
     "\n",
     "With the historical method, we're using only values that actually occurred in our dataset. This may not always be the scientific method because what happened over the last five years may not reflect what will happen over the next five years. We need to explore all of our options in order to best understand the risk profile of our investments. This leads us to a different way to calculate VaR. \n",
     "\n",
@@ -346,9 +348,7 @@
     "\n",
     "Example:\n",
     "\n",
-    "Assume you have an account with a mean value of \\\\$10,000 and an annual standard deviation of \\$500 and normally distributed returns. We can find that the critical value of a 95% confidence interval of a normal distribution is 1.96. Given these parameters, we can estimate with 95% probability that the most we can lose or gain in a year is:\n",
-    "\n",
-    "$500*1.96 = \\$980$\n",
+    "Assume you have an account with a mean value of \\\\$10,000 and an annual standard deviation of \\\\$500 and normally distributed returns. We can find that the critical value of a 95% confidence interval of a normal distribution is 1.96. Given these parameters, we can estimate with 95% probability that the most we can lose or gain in a year is: 500 * 1.96 = \\\\$980\n",
     "\n",
     "\n",
     "\n",
@@ -367,7 +367,7 @@
    },
    "source": [
     "### 4.1. Implementing VaR - Parametric Method with Normal Distribution\n",
-    "To calculate VaR using the parametric method is to assume a normal distribution for our returns and pass in the mean and standard deviation of our data into the `norm.ppf` method. This is a percent point function and allows us to pass in a confidence interval along with a mean and standard deviation to compute VaR. Even though we discussed that stock returns are non-normal in a previous lesson, this method of VaR calculation is arguably still a more valuable estimate than just using historical returns and will give us greater flexibility when doing Monte Carlo simulations in the near future.\n",
+    "To calculate VaR using the parametric method is to assume a normal distribution for our returns and pass in the mean and standard deviation of our data into the `norm.ppf()` method. This is a percent point function and allows us to pass in a confidence interval along with a mean and standard deviation to compute VaR. Even though we discussed that stock returns are non-normal in a previous lesson, this method of VaR calculation is arguably still a more valuable estimate than just using historical returns and will give us greater flexibility when doing Monte Carlo simulations in the near future.\n",
     "\n",
     "Let's use the AAPL data back to 2010 in order to calculate this. "
    ]
@@ -383,7 +383,9 @@
     "start = datetime.date(2010, 1, 1)\n",
     "end = datetime.date(2021, 11, 28)\n",
     "# end = datetime.date.today()\n",
-    "prices = web.DataReader([\"AAPL\"], \"yahoo\", start, end)[\"Adj Close\"]\n",
+    "\n",
+    "prices = pd.DataFrame(web.DataReader([\"AAPL\"], start, end)[\"Adj Close\"])\n",
+    "prices = prices.rename(columns={\"Adj Close\": \"AAPL\"})\n",
     "returns = prices.pct_change()\n",
     "returns = returns.dropna()"
    ]
@@ -515,7 +517,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd705684",
    "metadata": {
     "deletable": false,
     "editable": false
