--- a/module-4/lesson-1/Financial_Data_Module_4_Lesson_1.ipynb
+++ b/module-4/lesson-1/Financial_Data_Module_4_Lesson_1.ipynb
@@ -68,18 +68,18 @@
    },
    "source": [
     "## 1. Options\n",
-    "In this lesson, we'll use a Python package called `optionprice`.  This has a function called Option. As you recall from Module 4 of Financial Markets, there are two fields that describe the type of option:\n",
+    "In this lesson, we'll use a Python package called `optionprice`.  This has a class called `Option` (for simplicity we will call it function in this lesson). As you recall from Module 4 of Financial Markets, there are two fields that describe the type of option:\n",
     "1. The type of option: call or put. In the Option function, this is specified by the argument kind.\n",
     "2. The style of exercise: European or American. In the Option function, this is specified with the European argument set to True or False.\n",
     "\n",
     "There are also six numerical values that allow us to value the option:\n",
-    "1. Strike Level: k\n",
-    "2. Stock Price: s0\n",
+    "1. Stock Price: s0\n",
+    "2. Strike Level: k\n",
     "3. Time to expiration (here, this is given in calendar days): t\n",
     "4. Volatility: sigma (which is annualized)\n",
     "5. Risk-Free rate: r (which is annualized)\n",
     "6. Dividend-Yield: dv (which is annualized)\n",
-    "Let's import the package and create an ATM European call option. The function Option helps us to do that. Notice that we have to specify all eight of these fields as arguments to the Option function."
+    "Let's import the package and create an ATM European call option. The function `Option()` helps us to do that. Notice that we have to specify all eight of these fields as arguments to the `Option()` function."
    ]
   },
   {
@@ -228,6 +228,7 @@
    },
    "source": [
     "As you first learn options, be sure to distinguish the price from the payoff.  \n",
+    "\n",
     "The option's payoff is known precisely at expiration. Indeed, the payoff only applies at an option's expiration.\n",
     "The option's price applies at every time from inception up until the payoff.\n",
     "Clearly, pricing is a much more difficult undertaking than figuring out the payoff.\n",
@@ -301,7 +302,7 @@
     "Again, we have good agreement among the prices. Intentionally, we did not run a high number of iterations for the Monte Carlo method to illustrate how the results can be slightly off.\n",
     "\n",
     "Whenever we compute option prices, we should get in the habit of checking our prices using put-call parity. Module 4 of Financial Markets showed us that:\n",
-    "$$call - put = S - Ke^{-(rt)}$$  \n",
+    "$$\\text{call} - \\text{put} = S - Ke^{-(rt)}$$  \n",
     "Let's check this for ourselves.  \n",
     "Going forward, we'll use the option prices from the analytical form.\n",
     "First, let's calculate the left-hand side of the put-call parity equation."
@@ -391,9 +392,9 @@
     "id": "M61J3oVSvKk1"
    },
    "source": [
-    "Let's graph the call option's payoff.  \n",
-    "Let's assume that we paid nothing for the option to see its payoff.\n",
-    "The function single_plotter will take the following arguments:\n",
+    "Let's graph the call option's payoff. Let's assume that we paid nothing for the option to see its payoff.\n",
+    "The function `single_plotter()` will take the following arguments:\n",
+    "\n",
     "1. spot: current stock price\n",
     "2. strike: strike level\n",
     "3. op_type: option type, either \"c\" for call or \"p\" for put\n",
@@ -420,7 +421,7 @@
    },
    "source": [
     "Remember, that the option's payoff you see in books tends to neglect the premium you paid. Once you buy an option, you can not lose any additional money. However, long option positions can lose money if the options expires OTM.\n",
-    "Since we bought the call, we paid the $2.49 premium. Let's redraw the payoff taking the premimum into account.\n"
+    "Since we bought the call, we paid the $2.49 premium. Let's redraw the payoff taking the premium into account.\n"
    ]
   },
   {
@@ -514,12 +515,11 @@
     "id": "LIehF4WVvKk2"
    },
    "source": [
-    "Notice the non-linearity in each graph.  \n",
-    "The strike is where the change in slope occurs.  \n",
-    "To one side of the strike, the payoff is a flat line.\n",
-    "To the other side of the strike, the payoff is 45 degrees from the x-axis.\n",
-    "For long positions, the slope is upwards.\n",
-    "For short positions, the slope is downwards.\n",
+    "Notice the non-linearity in each graph. The strike is where the change in slope occurs. To one side of the strike, the payoff is a flat line. To the other side of the strike, the payoff is 45 degrees from the x-axis. \n",
+    "\n",
+    " - For long positions, the slope is upwards. \n",
+    " - For short positions, the slope is downwards.\n",
+    "\n",
     "Note that long calls have unlimited upside; therefore, short calls have unlimited downside.\n",
     "As this graph reminds us, it is prudent to hedge all short calls.\n",
     "\n",
@@ -575,8 +575,7 @@
     "id": "SYnGw_IHvKk2"
    },
    "source": [
-    "Another strategy involves trading volatility.  \n",
-    "Suppose we are unsure of the direction but believe that volatility will increase.\n",
+    "Another strategy involves trading volatility. Suppose we are unsure of the direction but believe that volatility will increase.\n",
     "We can buy a call and a put at the same strike. This is an option straddle."
    ]
   },
@@ -615,7 +614,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "id": "AHAcFjC6vKk2"
    },
@@ -686,32 +685,32 @@
     "id": "cVBXbQHKvKk3"
    },
    "source": [
-    "Plan A:  Buy a straddle.   Cost: \\$4.59.\n",
+    "Plan A:  Buy a straddle.   Cost: \\\\$4.59.\n",
     "\n",
-    "Plan B:  Buy an iron butterfly. \\$(4.59 - 0.20) \n",
-    "                                 =\\$4.39\n",
+    "Plan B:  Buy an iron butterfly. (4.59 - 0.20) =\\\\$4.39\n",
     "\n",
     "The iron butterfly involves a long straddle (buying a call and put at the same strike) and also a short straddle (selling an OTM put at a low strike and selling an OTM call at a high strike).\n",
     "The iron butterfly gives up a potential upside for a rebate of the option premium.\n",
     "Individually, we have \n",
-    "1 short put at 90\n",
-    "1 long call at 100\n",
-    "1 long put at 100\n",
-    "1 short call at 110\n",
     "\n",
-    "The long iron butterfly trader is conservatively long volatility: even if volatility increases significantly, the long iron butterfly's P&L is capped at about \\$5.  That's because the long call's gain past \\\\$110 level is offset by the loss in the short call at strike 110.\n",
+    "1 short put at 90  </br>\n",
+    "1 long call at 100  </br>\n",
+    "1 long put at 100  </br>\n",
+    "1 short call at 110  </br>\n",
+    "\n",
+    "The long iron butterfly trader is conservatively long volatility: even if volatility increases significantly, the long iron butterfly's P&L is capped at about \\\\$5.  That's because the long call's gain past \\\\$110 level is offset by the loss in the short call at strike \\\\$110.\n",
     "\n",
     "The long straddle trader is aggressively long volatility: the more volatility, the more their P&L.\n",
-    "\n",
     "For example, if the final stock price is 115, then \n",
-    "short put(90)   =  0\n",
-    "long put(100)   =  0\n",
-    "long call(100)  = 15\n",
-    "short call(110) = -5\n",
-    "Net Profit =     \\$10\n",
+    "\n",
+    "short put(90)   =  0  </br>\n",
+    "long put(100)   =  0  </br>\n",
+    "long call(100)  = 15  </br>\n",
+    "short call(110) = -5  </br>\n",
+    "Net Profit =     \\\\$10  </br>\n",
     "\n",
     "Indeed, \\\\$10 is the maximum revenue. When the \\\\$4.39 cost is taken into consideration, the maximum P&L is \n",
-    "\\$10 - \\$4.39 = \\$5.61\n",
+    "\\\\$10 - \\\\$4.39 = \\\\$5.61\n",
     "\n"
    ]
   },
@@ -754,7 +753,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7c07afa",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -788,7 +786,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
