--- a/module-4/lesson-2/Financial_Data_Module_4_Lesson_2.ipynb
+++ b/module-4/lesson-2/Financial_Data_Module_4_Lesson_2.ipynb
@@ -69,8 +69,9 @@
    },
    "source": [
     "## 1. Creating Objects\n",
-    "Recall from the previous lesson that we used the Python package optionprice.\n",
-    "This has a function called Option. We can use that function to create vanilla calls and puts."
+    "\n",
+    "Recall from the previous lesson that we used the Python package `optionprice`.\n",
+    "This has a function called `Option()`. We can use that function to create vanilla calls and puts."
    ]
   },
   {
@@ -121,7 +122,7 @@
    "source": [
     "## 2. Comparing Option Prices to Stock Prices\n",
     "Now, let's define a wrapper function to the opstrat function Option. We want to price an option using different stock prices, but keeping all other variables the same.\n",
-    "Our `CallOptionVsStock` function will use default values for everything except the stock price.\n",
+    "Our `CallOptionVsStock()` function will use default values for everything except the stock price.\n",
     "It is not our intent to write a very general function, but just one that can help create plots that show how the option price varies with the underlying stock price."
    ]
   },
@@ -146,13 +147,12 @@
    "source": [
     "This is an easy function to understand. We give it a descriptive, albeit somewhat long, function name that indicates we will be able to price options given stock prices.\n",
     "\n",
-    "Notice that we use default for the other five variables: strike, expiry, volatility, risk-free rate, and dividend yield.\n",
-    "The function merely passes these arguments to the `opstrat` function `Option`.\n",
-    "The function then returns the price of that option using the analytical method.\n",
+    "Notice that we use default for the other five variables: strike, expiry, volatility, risk-free rate, and dividend yield. The function merely passes these arguments to the `optionprice` function `Option()`. The function then returns the price of that option using the analytical method.\n",
     "\n",
-    "We'll define two more simple functions. First, we'll define a function, `getCallPayoff`, that determines the call's payoff, which is the non-negative value of S-K or 0.\n",
-    "Second, we'll define a function, `addCallPayoff`, that will add the call payoff to the price chart.\n",
-    "Note, in `addCallPayoff`, we take advantage of the Python function map, by mapping the `getCallPayoff` function over each of the stock prices, and storing the results in a list of option prices.\n",
+    "We'll define two more simple functions. First, we'll define a function, `getCallPayoff()`, that determines the call's payoff, which is the non-negative value of S-K or 0.\n",
+    "\n",
+    "Second, we'll define a function, `addCallPayoff()`, that will add the call payoff to the price chart. Note, in `addCallPayoff()`, we take advantage of the Python function map, by mapping the `getCallPayoff()` function over each of the stock prices, and storing the results in a list of option prices.\n",
+    "\n",
     "Just like data frames, these data structures should be familiar. Please see the required reading on lists in the textbook.\n"
    ]
   },
@@ -182,7 +182,7 @@
     "id": "GoxmxNZLiJOi"
    },
    "source": [
-    "Next, we create a list of the stock prices.  To create a smooth graph, we would like to have, say, about 40 different stock prices.  So we'll create a sequence of stock prices that span values centered around the strike level. Suppose the strike is 90.  We'll have stock prices at 70, 71, 72, ..., 90, 91, ..., 108, 109, and 110.  Likewise, we'll initialize a list of the option prices. Again, we make good use of the map function by mapping the `CallOptionVsStock` function over each of the stock prices and storing the results in a list of option prices."
+    "Next, we create a list of the stock prices.  To create a smooth graph, we would like to have, say, about 40 different stock prices.  So we'll create a sequence of stock prices that span values centered around the strike level. Suppose the strike is 90.  We'll have stock prices at 70, 71, 72, ..., 90, 91, ..., 108, 109, and 110.  Likewise, we'll initialize a list of the option prices. Again, we make good use of the map function by mapping the `CallOptionVsStock()` function over each of the stock prices and storing the results in a list of option prices."
    ]
   },
   {
@@ -230,7 +230,7 @@
    "source": [
     "Be sure to distinguish between the two curves. The blue line represents the option's price. The price applies during the option's lifetime. The orange line represents the option's payoff. The payoff applies only at the option's expiration.\n",
     "\n",
-    "Let's repeat the same process for puts. First, we'll define functions for `PutOptionsVsStock`, `getPutPayoff`, and `addPutPayoff`."
+    "Let's repeat the same process for puts. First, we'll define functions for `PutOptionsVsStock()`, `getPutPayoff()`, and `addPutPayoff()`."
    ]
   },
   {
@@ -278,7 +278,6 @@
    "source": [
     "StockPrices = list(range(80, 120))\n",
     "OptionPrices = list(map(PutOptionVsStock, StockPrices))\n",
-    "from matplotlib import pyplot as plt\n",
     "\n",
     "plt.plot(StockPrices, OptionPrices)\n",
     "plt.title(\"Put Option vs. Stock Price\")\n",
@@ -314,8 +313,8 @@
     "There is a subtle point to notice regarding the relative location. When we are out of the money, the blue line exceeds the option payoff. Why?\n",
     "\n",
     "Recall from Module 4 in Financial Markets that an option's value equals its intrinsic value plus its time value.\n",
-    "Out-of-the-money options do not have intrinsic value.  \n",
-    "All their value comes from having more time.\n",
+    "Out-of-the-money options do not have intrinsic value. All their value comes from having more time.\n",
+    "\n",
     "Generally, more time means more chances to get in the money!\n",
     "\n",
     "However, look at the difference when in the money.\n",
@@ -373,11 +372,13 @@
    },
    "source": [
     "## 4. Time Value Can Hurt European Puts\n",
-    "With more time, a significant difference appears. Recall that option value = intrinsic value + time value.\n",
+    "With more time, a significant difference appears. Recall that \n",
+    "\n",
+    "$$\\text{option value} = \\text{intrinsic value} + \\text{time value}$$\n",
     "\n",
     "The option value is the blue curve. The intrinsic value is the orange curve; it is the same as the payoff. The time value is therefore the vertical distance between these two curves.\n",
     "\n",
-    "time value = option value - intrinsic value \n",
+    "$$\\text{time value} = \\text{option value} - \\text{intrinsic value}$$ \n",
     "\n",
     "For a deep in-the-money (ITM) call, the time value is positive. In other words, the blue curve (option price) exceeds the orange curve (option payoff). More time for a call can lead to higher payoffs. Calls have unlimited payoffs.\n",
     "\n",
@@ -395,9 +396,11 @@
    },
    "source": [
     "## 5. Difference between European and American Puts\n",
+    "\n",
     "So what if we switched the exercise style to American?\n",
     "We have to make a few changes.\n",
-    "First, we'll define a new function, `AmericanPutOptionVsStock`, that uses the American style of exercise.\n",
+    "\n",
+    "First, we'll define a new function, `AmericanPutOptionVsStock()`, that uses the American style of exercise.\n",
     "Second, we have to use a different pricing methodology.  Due to the path-dependence of the American option, we have no analytical solution to price it.  Instead, we can only use a numerical solution.  In this case, we'll use binomial trees, with a small number of iterations, so we can produce the graph quickly."
    ]
   },
@@ -416,6 +419,7 @@
     "\n",
     "\n",
     "OptionPrices = list(map(AmericanPutOptionVsStock, StockPrices))\n",
+    "\n",
     "# Graph the American option\n",
     "plt.plot(StockPrices, OptionPrices)\n",
     "plt.title(\"American and European Put Options vs. Stock Price\")\n",
@@ -435,8 +439,10 @@
    "source": [
     "# Graph the American option\n",
     "plt.plot(StockPrices, OptionPrices)\n",
+    "\n",
     "# Graph the European option\n",
     "plt.plot(StockPrices, list(map(PutOptionVsStock, StockPrices)))\n",
+    "\n",
     "# Add titles, payoff, labels and a legend\n",
     "plt.title(\"American and European Put Options vs. Stock Price\")\n",
     "addPutPayoff(100)\n",
@@ -444,7 +450,7 @@
     "plt.ylabel(\"Put Price\")\n",
     "patch1 = mpatches.Patch(color=\"blue\", label=\"American\")\n",
     "patch2 = mpatches.Patch(color=\"green\", label=\"European\")\n",
-    "plt.legend(handles=[patch1, patch2])"
+    "plt.legend(handles=[patch1, patch2]);"
    ]
   },
   {
@@ -494,8 +500,6 @@
    },
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt\n",
-    "\n",
     "StockPrices = list(range(80, 120))\n",
     "\n",
     "\n",
@@ -528,10 +532,10 @@
     "\n",
     "OptionPrices = list(map(CallOptionVsStock, StockPrices))\n",
     "plt.plot(StockPrices, OptionPrices)\n",
-    "patch1 = mpatches.Patch(color=\"blue\", label=\"3 months\")\n",
-    "patch2 = mpatches.Patch(color=\"orange\", label=\"6 months\")\n",
-    "patch3 = mpatches.Patch(color=\"red\", label=\"9 months\")\n",
-    "plt.legend(handles=[patch1, patch2, patch3])"
+    "patch1 = mpatches.Patch(color=\"blue\", label=\"1 months\")\n",
+    "patch2 = mpatches.Patch(color=\"orange\", label=\"3 months\")\n",
+    "patch3 = mpatches.Patch(color=\"red\", label=\"6 months\")\n",
+    "plt.legend(handles=[patch1, patch2, patch3]);"
    ]
   },
   {
@@ -540,7 +544,7 @@
     "id": "rgxvit7biJOq"
    },
    "source": [
-    "With more time to expiry, the call options increase in value. Therefore, 9-month call options are more valuable than 6-month call options, which are more valuable than 3-month call options."
+    "With more time to expiry, the call options increase in value. Therefore, 6-month call options are more valuable than 3-month call options, which are more valuable than 1-month call options."
    ]
   },
   {
@@ -593,7 +597,7 @@
     "patch1 = mpatches.Patch(color=\"blue\", label=\"1 month\")\n",
     "patch2 = mpatches.Patch(color=\"orange\", label=\"2 months\")\n",
     "patch3 = mpatches.Patch(color=\"green\", label=\"3 months\")\n",
-    "plt.legend(handles=[patch1, patch2, patch3])"
+    "plt.legend(handles=[patch1, patch2, patch3]);"
    ]
   },
   {
@@ -603,11 +607,12 @@
    },
    "source": [
     "## 7. Option Prices for Different Volatilities\n",
+    "\n",
     "We've compared options with different expirations. Now let's compare options with different volatilities.\n",
     "\n",
-    "Before writing code like we did in the last section, notice the duplication in the functions. `CallOptionVsStock` was written as a new function each time, and we simply changed some of the default arguments because map was already iterating over S. Ideally, we'd like the map function to iterate over more than just one argument. We can easily iterate over other lists if we pass additional arguments to map.\n",
+    "Before writing code like we did in the last section, notice the duplication in the functions. `CallOptionVsStock()` was written as a new function each time, and we simply changed some of the default arguments because map was already iterating over S. Ideally, we'd like the map function to iterate over more than just one argument. We can easily iterate over other lists if we pass additional arguments to map.\n",
     "\n",
-    "Let's write `CallOptionVsStock` to take two required arguments: the stock price and the volatility. Then, we'll pass lists (of the appropriate length) to the map function."
+    "Let's write `CallOptionVsStock()` to take two required arguments: the stock price and the volatility. Then, we'll pass lists (of the appropriate length) to the map function."
    ]
   },
   {
@@ -628,9 +633,6 @@
     "    sigmas = [0.20 * i] * len(StockPrices)\n",
     "    OptionPrices = list(map(CallOptionVsStock, StockPrices, sigmas))\n",
     "    plt.plot(StockPrices, OptionPrices)\n",
-    "\n",
-    "import matplotlib.patches as mpatches\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "patch1 = mpatches.Patch(color=\"blue\", label=r\"$\\sigma$=20%\")\n",
     "patch2 = mpatches.Patch(color=\"orange\", label=r\"$\\sigma$=40%\")\n",
@@ -671,9 +673,6 @@
     "    OptionPrices = list(map(PutOptionVsStock, StockPrices, sigmas))\n",
     "    plt.plot(StockPrices, OptionPrices)\n",
     "\n",
-    "import matplotlib.patches as mpatches\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "patch1 = mpatches.Patch(color=\"blue\", label=r\"$\\sigma$=20%\")\n",
     "patch2 = mpatches.Patch(color=\"orange\", label=r\"$\\sigma$=40%\")\n",
     "patch3 = mpatches.Patch(color=\"green\", label=r\"$\\sigma$=60%\")\n",
@@ -699,7 +698,7 @@
     "## 8. Option Prices for Different Interest Rates\n",
     "\n",
     "Let's examine one more sensitivity: how the option prices vary with interest rates.\n",
-    "Imagine we have three different interest rates: 5%, 10%, and 20%:"
+    "Imagine we have three different interest rates: 5%, 10%, and 15%:"
    ]
   },
   {
@@ -720,9 +719,6 @@
     "    rates = [0.05 * i] * len(StockPrices)\n",
     "    OptionPrices = list(map(CallOptionVsStock, StockPrices, rates))\n",
     "    plt.plot(StockPrices, OptionPrices)\n",
-    "\n",
-    "import matplotlib.patches as mpatches\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "patch1 = mpatches.Patch(color=\"blue\", label=\"rate=5%\")\n",
     "patch2 = mpatches.Patch(color=\"orange\", label=\"rate=10%\")\n",
@@ -749,9 +745,6 @@
     "    rates = [0.05 * i] * len(StockPrices)\n",
     "    OptionPrices = list(map(PutOptionVsStock, StockPrices, rates))\n",
     "    plt.plot(StockPrices, OptionPrices)\n",
-    "\n",
-    "import matplotlib.patches as mpatches\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "patch1 = mpatches.Patch(color=\"blue\", label=\"rate=5%\")\n",
     "patch2 = mpatches.Patch(color=\"orange\", label=\"rate=10%\")\n",
@@ -791,7 +784,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd2a4f26",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -825,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
