--- a/module-4/lesson-3/Financial_Data_Module_4_Lesson_3.ipynb
+++ b/module-4/lesson-3/Financial_Data_Module_4_Lesson_3.ipynb
@@ -61,7 +61,8 @@
     "import matplotlib.patches as mpatches\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import yfinance as yf"
+    "import yfinance as yf\n",
+    "from yahoo_fin import options"
    ]
   },
   {
@@ -127,7 +128,6 @@
     "\n",
     "\n",
     "def options_chain(symbol):\n",
-    "\n",
     "    tk = yf.Ticker(symbol)\n",
     "    # Expiration dates\n",
     "    exps = tk.options\n",
@@ -202,8 +202,6 @@
    },
    "outputs": [],
    "source": [
-    "from yahoo_fin import options\n",
-    "\n",
     "nflx_dates = options.get_expiration_dates(\"nflx\")\n",
     "len(nflx_dates)"
    ]
@@ -258,6 +256,7 @@
     "try:\n",
     "    callsNflx = options.get_calls(\"nflx\")\n",
     "except:  # noQA E722\n",
+    "    # to load data from local file in case of any disruptions\n",
     "    callsNflx = pd.read_csv(\"nflx_calls.csv\")\n",
     "\n",
     "list(callsNflx.columns)"
@@ -419,7 +418,7 @@
    "source": [
     "plt.plot(callStrikes, callOpenInt)\n",
     "plt.xlabel(\"Call Strikes\")\n",
-    "plt.ylabel(\"Call Open Interest\")"
+    "plt.ylabel(\"Call Open Interest\");"
    ]
   },
   {
@@ -433,9 +432,8 @@
    "source": [
     "plt.xlim([300, 500])\n",
     "plt.plot(callStrikes, callOpenInt)\n",
-    "plt\n",
     "plt.xlabel(\"Strike\")\n",
-    "plt.ylabel(\"Open Interest\")"
+    "plt.ylabel(\"Open Interest\");"
    ]
   },
   {
@@ -454,6 +452,7 @@
    },
    "source": [
     "Options with low amounts of open interest are not liquid.  Recall from Financial Markets that we studied liquidity.  Think of each option as a vendor at an outdoor market.  Think of open interest as the number of customers who bought fruits and vegetables at this market.  \n",
+    "\n",
     "A vendor with no customers is like an option with insufficient open interest.\n",
     "There are little to no option contracts written.\n",
     "Therefore, the markets are illiquid.  \n",
@@ -482,11 +481,13 @@
     "try:\n",
     "    putsNflx = options.get_puts(\"nflx\")\n",
     "except:  # noqa E722\n",
+    "    # to load data from local file in case of any disruptions\n",
     "    putsNflx = pd.read_csv(\"nflx_puts.csv\")\n",
     "\n",
     "for index in putsNflx.index:\n",
     "    if \"-\" == putsNflx[\"Volume\"][index]:\n",
     "        putsNflx.loc[index, \"Volume\"] = 0\n",
+    "\n",
     "numPutStrikes = putsNflx[\"Strike\"].count()\n",
     "numPutStrikes"
    ]
@@ -504,7 +505,7 @@
     "putOpenInt = list(putsNflx[\"Open Interest\"])\n",
     "plt.plot(putStrikes, putOpenInt)\n",
     "plt.xlabel(\"Put Strikes\")\n",
-    "plt.ylabel(\"Put Open Interest\")"
+    "plt.ylabel(\"Put Open Interest\");"
    ]
   },
   {
@@ -660,6 +661,7 @@
     "callDf[\"Strikes\"] = callStrikes\n",
     "callDf[\"CallOpenInt\"] = callOpenInt\n",
     "callDf[\"CallVolume\"] = callVolume\n",
+    "\n",
     "putDf = pd.DataFrame()\n",
     "putDf[\"Strikes\"] = putStrikes\n",
     "putDf[\"PutOpenInt\"] = putOpenInt\n",
@@ -704,9 +706,10 @@
     "plt.title(\"Open Interest vs. Strike Level\")\n",
     "plt.xlabel(\"Strike\")\n",
     "plt.ylabel(\"Open Interest\")\n",
+    "\n",
     "patch1 = mpatches.Patch(color=\"blue\", label=\"Call Open Interest\")\n",
     "patch2 = mpatches.Patch(color=\"orange\", label=\"Put Open Interest\")\n",
-    "plt.legend(handles=[patch1, patch2])"
+    "plt.legend(handles=[patch1, patch2]);"
    ]
   },
   {
@@ -718,7 +721,8 @@
     "What is so interesting about open interest? \n",
     "Meaningful data ratios derive from these open interest numbers.\n",
     "Let's define one.\n",
-    "Put Call Ratio of Open Interest = Put Open Interest / Call Open Interest\n",
+    "\n",
+    "$$\\text{Put Call Ratio of Open Interest} = \\frac{\\text{Put Open Interest}}{\\text{Call Open Interest}}$$\n",
     "\n",
     "Read the required reading to see how useful Open Interest can be in predicting the direction of a stock.\n",
     "How can we define a function for put call ratio?"
@@ -918,7 +922,7 @@
     "plt.plot(list(z4[\"Strike\"]), list(z4[\"Ask\"] - z4[\"Bid\"]))\n",
     "plt.title(\"Bid-Ask Spread as a Function of Strike\")\n",
     "plt.xlabel(\"Strike\")\n",
-    "plt.ylabel(\"Bid-Ask Spread\")"
+    "plt.ylabel(\"Bid-Ask Spread\");"
    ]
   },
   {
