--- a/module-5/lesson-1/Financial_Data_Module_5_Lesson_1.ipynb
+++ b/module-5/lesson-1/Financial_Data_Module_5_Lesson_1.ipynb
@@ -76,6 +76,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note:** The code in this lesson is adapted to work correctly in Selenium package version 4.2.0. Thus we advise to install specific version by running `!pip install selenium==4.2.0 --force-reinstall` command before proceeding with the rest of this module."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "6FSwC0akcVP0"
    },
@@ -126,21 +133,14 @@
    "outputs": [],
    "source": [
     "# Required\n",
-    "company_ticker = \"HES\"\n",
-    "# or Try:\n",
-    "# 'F'\n",
-    "# 'KHC'\n",
-    "# 'DVN'\n",
+    "company_ticker = \"HES\"  # or try: 'F', 'KHC', 'DVN'\n",
     "\n",
     "# Optional\n",
-    "company_name = \"Hess\"\n",
-    "# or Try:\n",
-    "# 'Ford Motor'\n",
-    "# 'Kraft Heinz Co'\n",
-    "# 'Devon Energy'\n",
+    "company_name = \"Hess\"  # or try: 'Ford Motor', 'Kraft Heinz Co', 'Devon Energy'\n",
     "\n",
     "# Optional Input Choices:\n",
-    "# ALL, Annual, Anytime, Bi-Monthly, Monthly, N/A, None, Pays At Maturity, Quarterly, Semi-Annual, Variable\n",
+    "# ALL, Annual, Anytime, Bi-Monthly, Monthly, N/A, None,\n",
+    "# Pays At Maturity, Quarterly, Semi-Annual, Variable\n",
     "coupon_frequency = \"Semi-Annual\""
    ]
   },
@@ -341,23 +341,26 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make sure that you review the documentation for the relevant code and are familiar with how the code above works; in particular, understand the following (and their parameters), as these will all serve you well when you clean, transform, and filter your data in the future (the related documentation is also required reading): \n",
+    "\n",
+    "`df.dropna()` <br>\n",
+    "`inplace` <br>\n",
+    "`df.replace()` <br>\n",
+    "`df['X'].astype()` <br> \n",
+    "`pd.to_datetime()` <br>\n",
+    "`df['X']).dt.strftime` <br>\n",
+    "and the code lines that involve the variable `years_mask` <br>\n",
+    "Also, be sure to understand how `df.values.tolist()` works.<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "yHUxwvDRtmP-"
    },
    "source": [
-    "Make sure that you review the documentation for the relevant code and are familiar with how the code above works; in particular, understand the following (and their parameters), as these will all serve you well when you clean, transform, and filter your data in the future (the related documentation is also required reading): \n",
-    "\n",
-    "df.dropna() <br>\n",
-    "inplace <br>\n",
-    "df.replace() <br>\n",
-    "df['X'].astype() <br> \n",
-    "pd.to_datetime() <br>\n",
-    "df['X']).dt.strftime <br>\n",
-    "and the code lines that involve the variable years_mask <br>\n",
-    "\n",
-    "Also, be sure to understand how df.values.tolist() works.<br>\n",
-    "\n",
-    "\n",
     "## 4. Conclusion\n",
     "\n",
     "In this lesson, we revisited the calculation for market-implied probability of default but in much more detail. We also downloaded price and rating information for bonds issued by a particular issuer from a well-regarded bond database, FINRA's TRACE. Once we downloaded it, we cleaned it, transformed some of the data related to bond maturity, and filtered the data so that we could focus our analysis on the bonds with shorter maturities.\n",
