--- a/module-5/lesson-2/Financial_Data_Module_5_Lesson_2.ipynb
+++ b/module-5/lesson-2/Financial_Data_Module_5_Lesson_2.ipynb
@@ -73,17 +73,18 @@
    },
    "outputs": [],
    "source": [
-    "# Python libraries to install\n",
-    "# Lesson 1\n",
     "import time\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import yfinance as yfin\n",
+    "\n",
+    "yfin.pdr_override()\n",
+    "\n",
     "from datetime import date\n",
     "from datetime import datetime as dt\n",
     "from datetime import timedelta\n",
     "\n",
-    "# Lesson 2 (in addition to above)\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import pandas_datareader as dr\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.options import Options\n",
     "from selenium.webdriver.chrome.service import Service\n",
@@ -102,21 +103,14 @@
    "outputs": [],
    "source": [
     "# Required\n",
-    "company_ticker = \"HES\"\n",
-    "# or Try:\n",
-    "# 'F'\n",
-    "# 'KHC'\n",
-    "# 'DVN'\n",
+    "company_ticker = \"HES\"  # or try: 'F', 'KHC', 'DVN'\n",
     "\n",
     "# Optional\n",
-    "company_name = \"Hess\"\n",
-    "# or Try:\n",
-    "# 'Ford Motor'\n",
-    "# 'Kraft Heinz Co'\n",
-    "# 'Devon Energy'\n",
+    "company_name = \"Hess\"  # or try: 'Ford Motor', 'Kraft Heinz Co', 'Devon Energy'\n",
     "\n",
     "# Optional Input Choices:\n",
-    "# ALL, Annual, Anytime, Bi-Monthly, Monthly, N/A, None, Pays At Maturity, Quarterly, Semi-Annual, Variable\n",
+    "# ALL, Annual, Anytime, Bi-Monthly, Monthly, N/A, None,\n",
+    "# Pays At Maturity, Quarterly, Semi-Annual, Variable\n",
     "coupon_frequency = \"Semi-Annual\""
    ]
   },
@@ -313,30 +307,29 @@
     "\n",
     "To calculate the probability of default using current corporate bond prices, we will use bond valuation techniques. The valuation of corporate bonds is similar to that of any risky asset; it is dependent on the present value of future expected cash flows, discounted at a risk-adjusted rate (similar to Discounted Cash Flow analysis).\n",
     "\n",
-    "\\begin{equation*}\n",
-    "BOND\\ PRICE = \\frac{ECF_1}{1+d}\\ +\\ \\frac{ECF_2}{(1+d)^2}\\ +\\ \\frac{ECF_3}{(1+d)^3}\n",
-    "\\end{equation*}\n",
+    "$$\\text{Bond price} = \\frac{\\text{ECF}_1}{1+d} + \\frac{\\text{ECF}_2}{(1+d)^2} + \\frac{\\text{ECF}_3}{(1+d)^3}$$\n",
     "\n",
-    "$ECF = Expected\\ Cash\\ Flow$<br>\n",
-    "$d = Discount\\ Rate$<br>\n",
+    "$\\text{ECF}$ = Expected Cash Flow  <br>\n",
+    "$d$ = Discount Rate  <br>\n",
     "\n",
     "Corporate bond valuation also accounts for the probability of the bond defaulting and not paying back the principal in full.\n",
     "\n",
     "We now need to estimate the expected cash flows and the risk-adjusted discount rate.\n",
     "\n",
     "## 2. Estimating Expected Cash Flows\n",
-    "The first step in valuing the bond is to find the expected cash flow at each period. This is done by adding the product of the default payout and the probability of default (P) with the product of the promised payment (coupon payments and repayment of principal) and the probability of not defaulting (1-P), which is also referred to as the probability of survival.\n",
+    "The first step in valuing the bond is to find the expected cash flow at each period. This is done by adding the product of the default payout and the probability of default ($p$) with the product of the promised payment (coupon payments and repayment of principal) and the probability of not defaulting ($1-p$), which is also referred to as the probability of survival.\n",
     "\n",
-    "$ECF_1 = (P)*(Default\\ Payout)\\ +\\ (1-P)*(Coupon\\ Payment)$<br>\n",
-    "$ECF_2 = (1-P)*\\{(P)\\ *(Default\\ Payout)\\ +\\ (1-P)*(Coupon\\ Payment)\\}$<br>\n",
-    "$ECF_3 = (1-P)^2*\\{(P)\\ *(Default\\ Payout)\\ +\\ (1-P)*(Coupon\\ Payment\\ +\\ Principal)\\}$<br>\n",
+    "$\\text{ECF}_1 = p\\ (\\text{Default Payout}) + (1-p)\\ (\\text{Coupon Payment})$\n",
+    "$\\text{ECF}_2 = (1-p)\\ \\big( p\\ (\\text{Default Payout}) + (1-p)\\ (\\text{Coupon Payment}) \\big)$\n",
+    "$\\text{ECF}_3 = (1-p)^2\\ \\big( p\\ (\\text{Default Payout}) + (1-p)\\ (\\text{Coupon Payment} + \\text{Principal}) \\big)$\n",
     "\n",
-    "$P = Probability\\ of\\ Default$<br>\n",
-    "$Default\\ Payout = Principal\\ *\\ Recovery\\ Rate$<br>\n",
+    "$p = \\text{Probability of Default}$ <br>\n",
+    "$\\text{Default Payout} = \\text{Principal} \\times \\text{Recovery Rate}$\n",
+    "\n",
     "\n",
     "If the bond defaults, the default payout is the product of recovery rate and the principal. In the following example, the principal will be at par value for the bond (e.g. $100). The recovery rate is the percentage of the loss recovered from a bond in default. The recovery rate varies by industry, the degree of seniority in the capital structure, the amount of leverage in the capital structure in total, and whether a particular security is secured or otherwise collateralized. We assume a 40% recovery rate for the corporate bonds in the following example, which is a common baseline assumption in practice.\n",
     "\n",
-    "The code in the below function shows how the expected cash flow is calculated at each period. We then use the solve function from the Python library `SymPy` to calculate the probability of default that will equate future expected cash flows with the current price of the corporate bond when discounted at the risk-adjusted rate. Running the cell below defines the function for use, but it will not run the function. We will wait to run the function until after the risk-adjusted discount rate is calculated."
+    "The code in the follow-up Lesson 3 will show how the expected cash flow is calculated at each period. We then use the `solve()` function from the Python library `SymPy` to calculate the probability of default that will equate future expected cash flows with the current price of the corporate bond when discounted at the risk-adjusted rate."
    ]
   },
   {
@@ -346,7 +339,7 @@
    },
    "source": [
     "## 3. The Market Risk Premium and the Expected Risk Premium\n",
-    "After the expected cash flows are calculated, they are discounted back to period 0 at a risk-adjusted discount rate (d) to calculate the bond’s price. A risk-adjusted discount rate is the rate obtained by combining an expected risk premium with the risk-free rate during the calculation of the present value of a risky investment.\n",
+    "After the expected cash flows are calculated, they are discounted back to period 0 at a risk-adjusted discount rate ($d$) to calculate the bond’s price. A risk-adjusted discount rate is the rate obtained by combining an expected risk premium with the risk-free rate during the calculation of the present value of a risky investment.\n",
     "\n",
     "**_Risk-adjusted Discount Rate = Risk-free Interest Rate + Expected Risk Premium_**\n",
     "\n",
@@ -369,11 +362,12 @@
     "\n",
     "To calculate the expected risk premium, we must first calculate the market rate of return. We can use the capital asset pricing model (CAPM) to determine the market rate of return.\n",
     "\n",
-    "$$r_m = r_f\\ +(\\beta*MRP)$$<br>\n",
-    "$r_m = Market\\ Rate\\ of\\ Return$<br>\n",
-    "$r_f = Riskfree\\ Rate$<br>\n",
-    "$\\beta = Beta$<br>\n",
-    "$MRP = Market\\ Risk\\ Premium$<br>\n",
+    "$$r_{_m} = r_{_f} + \\beta \\cdot \\text{MRP}$$\n",
+    "\n",
+    "$r_{_m}$ = Market Rate of Return  <br>\n",
+    "$r_{_f}$ = Risk-free Rate  <br>\n",
+    "$\\beta$ = Beta  <br>\n",
+    "$\\text{MRP}$ = Market Risk Premium  <br>\n",
     "\n",
     "CAPM is an equilibrium model that takes the risk-free rate, the stock market's beta, and the market risk premium as inputs. Let's now determine the value for each of these inputs.\n",
     "\n",
@@ -398,9 +392,9 @@
     "timespan = 100\n",
     "current_date = date.today()\n",
     "past_date = current_date - timedelta(days=timespan)\n",
-    "ten_year_risk_free_rate_df = dr.DataReader(\"^TNX\", \"yahoo\", past_date, current_date)\n",
+    "ten_year_risk_free_rate_df = yfin.download(\"^TNX\", past_date, current_date)\n",
     "ten_year_risk_free_rate = (\n",
-    "    ten_year_risk_free_rate_df.iloc[len(ten_year_risk_free_rate_df) - 1, 5]\n",
+    "    ten_year_risk_free_rate_df.iloc[len(ten_year_risk_free_rate_df) - 1, 4]\n",
     ") / 100\n",
     "ten_year_risk_free_rate"
    ]
@@ -487,8 +481,8 @@
     "\n",
     "In this step, we will use a one-year risk-free rate so that the expected risk premium matches the duration we want for the risk-adjusted discount rate. We accomplish this by taking the yield on the very liquid 10-year U.S. Treasury note and raising it to the power of 1/10 in order to convert the yield to a one-year equivalent.\n",
     "\n",
-    "Note that 2\\*\\*3 is Pythonic for $2^3$, or 2 raised to the power of 3 (= 8).\n",
-    "By the same token, 8**(1/3) is the cube root of 8 (=2)."
+    "Note that `2**3` is Pythonic for $2^3$, or 2 raised to the power of 3 (= 8).\n",
+    "By the same token, `8**(1/3)` is the cube root of 8 (=2)."
    ]
   },
   {
@@ -542,8 +536,8 @@
    "outputs": [],
    "source": [
     "# Download data for the bond fund and the market\n",
-    "market_data = dr.get_data_yahoo(\"SPY\", past_date, current_date)  # the market\n",
-    "fund_data = dr.get_data_yahoo(\"VCSH\", past_date, current_date)  # the bond fund"
+    "market_data = yfin.download(\"SPY\", past_date, current_date)  # the market\n",
+    "fund_data = yfin.download(\"VCSH\", past_date, current_date)  # the bond fund"
    ]
   },
   {
@@ -601,7 +595,6 @@
     "print(\"market standard deviation: \", market_stdev)\n",
     "\n",
     "# Calculate bond fund standard deviation, for use in the numerator\n",
-    "\n",
     "fund_stdev = fund_data[\"Adj Close\"].std()\n",
     "print(\"fund standard deviation: \", fund_stdev)\n",
     "\n",
@@ -624,7 +617,7 @@
    "source": [
     "\n",
     "\n",
-    "Note that .corr() above can be used to calculate any of the three correlation metrics we have discussed, taking the arguments ‘pearson’, ‘kendall’, or ‘spearman’ (with 'pearson' as the default).\n",
+    "Note that `.corr()` above can be used to calculate any of the three correlation metrics we have discussed, taking the arguments ‘pearson’, ‘kendall’, or ‘spearman’ (with 'pearson' as the default).\n",
     "We include the argument here to emphasize this fact."
    ]
   },
@@ -816,7 +809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
