--- a/module-5/lesson-3/Financial_Data_Module_5_Lesson_3.ipynb
+++ b/module-5/lesson-3/Financial_Data_Module_5_Lesson_3.ipynb
@@ -51,21 +51,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "RKW4GaP1XuBc"
-   },
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "## 1. SymPy: Solving the Probability of Default\n",
-    "Given the semi-annual coupon payment frequency for the bonds we are analyzing, we can feed the above annual risk-adjusted discount rate into the *bonds probability of default* function below and it will convert these annual rates into semi-annual rates.\n",
-    "\n",
-    "Our last step before running the *bonds probability of default* function is to define the principal payment, the recovery rate, and the symbol for probability of default (P) that the solve function from the Python library `SymPy` will use to calculate the probability of default by equating future expected cash flows with the current price of the corporate bond when discounted at the risk-adjusted rate."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "SiaLSCPf46RX"
    },
    "source": [
@@ -78,25 +63,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Python libraries to install\n",
-    "# Lesson 1\n",
     "import time\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import yfinance as yfin\n",
+    "\n",
+    "yfin.pdr_override()\n",
+    "\n",
     "from datetime import date\n",
     "from datetime import datetime as dt\n",
     "from datetime import timedelta\n",
     "\n",
-    "# Lesson 2\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import pandas_datareader as dr\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.options import Options\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium.webdriver.support.ui import Select, WebDriverWait\n",
-    "\n",
-    "# Lesson 3 (in addition to above)\n",
     "from sympy import solve, symbols\n",
     "from webdriver_manager.chrome import ChromeDriverManager"
    ]
@@ -110,21 +94,14 @@
    "outputs": [],
    "source": [
     "# Required\n",
-    "company_ticker = \"HES\"\n",
-    "# or Try:\n",
-    "# 'F'\n",
-    "# 'KHC'\n",
-    "# 'DVN'\n",
+    "company_ticker = \"HES\"  # or try: 'F', 'KHC', 'DVN'\n",
     "\n",
     "# Optional\n",
-    "company_name = \"Hess\"\n",
-    "# or Try:\n",
-    "# 'Ford Motor'\n",
-    "# 'Kraft Heinz Co'\n",
-    "# 'Devon Energy'\n",
+    "company_name = \"Hess\"  # or try: 'Ford Motor', 'Kraft Heinz Co', 'Devon Energy'\n",
     "\n",
     "# Optional Input Choices:\n",
-    "# ALL, Annual, Anytime, Bi-Monthly, Monthly, N/A, None, Pays At Maturity, Quarterly, Semi-Annual, Variable\n",
+    "# ALL, Annual, Anytime, Bi-Monthly, Monthly, N/A, None,\n",
+    "# Pays At Maturity, Quarterly, Semi-Annual, Variable\n",
     "coupon_frequency = \"Semi-Annual\""
    ]
   },
@@ -316,14 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 246
-    },
-    "id": "BWbL_ydTXuBW",
-    "outputId": "109fe35e-7640-4a1c-ca3a-dfe8971c3166"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "bond_df_result = bond_dataframe_filter(bond_prices_df)\n",
@@ -346,9 +316,9 @@
     "timespan = 100\n",
     "current_date = date.today()\n",
     "past_date = current_date - timedelta(days=timespan)\n",
-    "ten_year_risk_free_rate_df = dr.DataReader(\"^TNX\", \"yahoo\", past_date, current_date)\n",
+    "ten_year_risk_free_rate_df = yfin.download(\"^TNX\", past_date, current_date)\n",
     "ten_year_risk_free_rate = (\n",
-    "    ten_year_risk_free_rate_df.iloc[len(ten_year_risk_free_rate_df) - 1, 5]\n",
+    "    ten_year_risk_free_rate_df.iloc[len(ten_year_risk_free_rate_df) - 1, 4]\n",
     ") / 100\n",
     "ten_year_risk_free_rate"
    ]
@@ -434,8 +404,8 @@
    "outputs": [],
    "source": [
     "# Download data for the bond fund and the market\n",
-    "market_data = dr.get_data_yahoo(\"SPY\", past_date, current_date)  # the market\n",
-    "fund_data = dr.get_data_yahoo(\"VCSH\", past_date, current_date)  # the bond fund"
+    "market_data = yfin.download(\"SPY\", past_date, current_date)  # the market\n",
+    "fund_data = yfin.download(\"VCSH\", past_date, current_date)  # the bond fund"
    ]
   },
   {
@@ -570,10 +540,23 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "id": "RKW4GaP1XuBc"
+   },
+   "source": [
+    "## 1. SymPy: Solving the Probability of Default\n",
+    "\n",
+    "Given the semi-annual coupon payment frequency for the bonds we are analyzing, we can feed the annual risk-adjusted discount rate into the `bonds_probability_of_default()` function below and it will convert these annual rates into semi-annual rates.\n",
+    "\n",
+    "Our last step before running the `bonds_probability_of_default()` function is to define the principal payment, the recovery rate, and the symbol for probability of default ($p$) that the `solve()` function from the Python library `SymPy` will use to calculate the probability of default by equating future expected cash flows with the current price of the corporate bond when discounted at the risk-adjusted rate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "id": "qGPU5aU0xtNA"
    },
    "source": [
-    "Notice below that the numpy library method \"np.append()\" is different from the pandas library method \"df1.append(df2)\"."
+    "Notice below that the numpy library method `np.append()` is different from the pandas library method `df1.append(df2)`."
    ]
   },
   {
@@ -587,7 +570,6 @@
     "def bonds_probability_of_default(\n",
     "    coupon, maturity_years, bond_price, principal_payment, risk_adjusted_discount_rate\n",
     "):\n",
-    "\n",
     "    price = bond_price\n",
     "    prob_default_exp = 0\n",
     "\n",
@@ -672,7 +654,7 @@
     "id": "Xnx90V-GXuBc"
    },
    "source": [
-    "We are now ready to run the *bonds_probability_of_default* function to calculate the market-implied probability of default for the chosen corporate bonds."
+    "We are now ready to run the `bonds_probability_of_default()` function to calculate the market-implied probability of default for the chosen corporate bonds."
    ]
   },
   {
@@ -737,7 +719,7 @@
    "source": [
     "## 3. Conclusion\n",
     "\n",
-    "In this lesson, we used the inputs we found in the previous lessons to finally estimate the probability of default for the bond issuer of our choice. We had to provide an assumed recovery rate, and then use a solver (the \"solve\" method) embedded in the *bonds probability of default* function, to find the probability of default implied by the price of the relevant bonds.\n",
+    "In this lesson, we used the inputs we found in the previous lessons to finally estimate the probability of default for the bond issuer of our choice. We had to provide an assumed recovery rate, and then use a solver (the `solve()` method) embedded in the `bonds_probability_of_default()` function, to find the probability of default implied by the price of the relevant bonds.\n",
     "\n",
     "In the next lesson, we look at the ratings for these bonds provided by the ratings agencies. We will download the transition matrices (which include the probability of default for each rating) and compare the probability of default (PD) that we calculated in this lesson to the PD associated with the ratings agencies' ratings.\n"
    ]
