--- a/module-5/lesson-4/Financial_Data_Module_5_Lesson_4.ipynb
+++ b/module-5/lesson-4/Financial_Data_Module_5_Lesson_4.ipynb
@@ -60,37 +60,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "02Qlu1eDXuBQ",
-    "outputId": "24698da5-2aed-42a6-fa57-5f03108aeb84"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Python libraries to install\n",
-    "# Lesson 1\n",
     "import time\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import yfinance as yfin\n",
+    "\n",
+    "yfin.pdr_override()\n",
+    "\n",
     "from datetime import date\n",
     "from datetime import datetime as dt\n",
     "from datetime import timedelta\n",
     "\n",
-    "# Lesson 4\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Lesson 2\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import pandas_datareader as dr\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.options import Options\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium.webdriver.support.ui import Select, WebDriverWait\n",
-    "\n",
-    "# Lesson 3\n",
     "from sympy import solve, symbols\n",
     "from webdriver_manager.chrome import ChromeDriverManager"
    ]
@@ -104,21 +95,14 @@
    "outputs": [],
    "source": [
     "# Required\n",
-    "company_ticker = \"HES\"\n",
-    "# or Try:\n",
-    "# 'F'\n",
-    "# 'KHC'\n",
-    "# 'DVN'\n",
+    "company_ticker = \"HES\"  # or try: 'F', 'KHC', 'DVN'\n",
     "\n",
     "# Optional\n",
-    "company_name = \"Hess\"\n",
-    "# or Try:\n",
-    "# 'Ford Motor'\n",
-    "# 'Kraft Heinz Co'\n",
-    "# 'Devon Energy'\n",
+    "company_name = \"Hess\"  # or try: 'Ford Motor', 'Kraft Heinz Co', 'Devon Energy'\n",
     "\n",
     "# Optional Input Choices:\n",
-    "# ALL, Annual, Anytime, Bi-Monthly, Monthly, N/A, None, Pays At Maturity, Quarterly, Semi-Annual, Variable\n",
+    "# ALL, Annual, Anytime, Bi-Monthly, Monthly, N/A, None,\n",
+    "# Pays At Maturity, Quarterly, Semi-Annual, Variable\n",
     "coupon_frequency = \"Semi-Annual\""
    ]
   },
@@ -332,9 +316,9 @@
     "timespan = 100\n",
     "current_date = date.today()\n",
     "past_date = current_date - timedelta(days=timespan)\n",
-    "ten_year_risk_free_rate_df = dr.DataReader(\"^TNX\", \"yahoo\", past_date, current_date)\n",
+    "ten_year_risk_free_rate_df = yfin.download(\"^TNX\", past_date, current_date)\n",
     "ten_year_risk_free_rate = (\n",
-    "    ten_year_risk_free_rate_df.iloc[len(ten_year_risk_free_rate_df) - 1, 5]\n",
+    "    ten_year_risk_free_rate_df.iloc[len(ten_year_risk_free_rate_df) - 1, 4]\n",
     ") / 100\n",
     "ten_year_risk_free_rate"
    ]
@@ -420,8 +404,8 @@
    "outputs": [],
    "source": [
     "# Download data for the bond fund and the market\n",
-    "market_data = dr.get_data_yahoo(\"SPY\", past_date, current_date)  # the market\n",
-    "fund_data = dr.get_data_yahoo(\"VCSH\", past_date, current_date)  # the bond fund"
+    "market_data = yfin.download(\"SPY\", past_date, current_date)  # the market\n",
+    "fund_data = yfin.download(\"VCSH\", past_date, current_date)  # the bond fund"
    ]
   },
   {
@@ -564,7 +548,6 @@
     "def bonds_probability_of_default(\n",
     "    coupon, maturity_years, bond_price, principal_payment, risk_adjusted_discount_rate\n",
     "):\n",
-    "\n",
     "    price = bond_price\n",
     "    prob_default_exp = 0\n",
     "\n",
@@ -670,7 +653,7 @@
     "## 1. Credit Ratings\n",
     "As you recall from the Financial Markets course, credit ratings are used for bonds issued by corporations and government entities as well as for asset-backed securities (ABS) and mortgage-backed securities (MBS). The three major global credit rating agencies are Moody’s Investors Service, Standard & Poor’s, and Fitch Ratings. Each provides credit quality ratings for issuers as well as specific issues. These are ordinal ratings focusing on the probability of default.\n",
     "\n",
-    "The credit rating agencies consider the expected loss given default (LGD) by means of **notching**, which is an adjustment to the issuer rating to reflect the priority of claim for specific debt issues of that issuer and to reflect any subordination. The issuer rating is typically for senior unsecured debt. The rating on subordinated debt is then adjusted, or “notched,” by lowering it one or two levels—for instance, from A+ down to A or further down to A–. This inclusion of loss given default in addition to the probability of default explains why they are called “credit ratings” and not just “default ratings.”\n",
+    "The credit rating agencies consider the expected loss given default (LGD) by means of **notching**, which is an adjustment to the issuer rating to reflect the priority of claim for specific debt issues of that issuer and to reflect any subordination. The issuer rating is typically for senior unsecured debt. The rating on subordinated debt is then adjusted, or “notched” by lowering it one or two levels - for instance, from A+ down to A or further down to A-. This inclusion of loss given default in addition to the probability of default explains why they are called “credit ratings” and not just “default ratings.”\n",
     "\n",
     "The rating agencies report transition matrices based on their historical data. A transition matrix shows the probability that a rating changes (or stays the same) in one year's time. (The probability that the rating changes to default is the probability of default.)\n",
     "\n",
@@ -704,7 +687,6 @@
    "outputs": [],
    "source": [
     "def prob_default_term_structure(df):\n",
-    "\n",
     "    fig, (ax1, ax2) = plt.subplots(1, 2, clear=True)\n",
     "    fig.subplots_adjust(wspace=0.5)\n",
     "    Mgroups = df.groupby(\"Moody's®\")\n",
@@ -766,7 +748,7 @@
     "id": "dnzyHSWkXuBd"
    },
    "source": [
-    "##**3. Downloading the Transition Matrix**##\n"
+    "## 3. Downloading the Transition Matrix\n"
    ]
   },
   {
@@ -789,7 +771,6 @@
    "outputs": [],
    "source": [
     "def get_transition_matrix(tgt_website):\n",
-    "\n",
     "    df_list = pd.read_html(tgt_website)\n",
     "    matrix_result_df = df_list[22]\n",
     "\n",
@@ -932,7 +913,7 @@
     "id": "_58-6_1pXuBf"
    },
    "source": [
-    "In the example above, the bond valuation techniques using a risk-adjusted discount rate do a reasonably good job of estimating the market-implied default probabilities. We calculated the expected cash flow at each period by adding the product of the default payout and the probability of default (P) with the product of the promised payment (coupon payments and repayment of principal) and the probability of not defaulting (1-P). One reason for any differences between historical and market-implied default probabilities is that historical default probabilities do not include the default risk premium associated with uncertainty over the timing of possible default loss.\n",
+    "In the example above, the bond valuation techniques using a risk-adjusted discount rate do a reasonably good job of estimating the market-implied default probabilities. We calculated the expected cash flow at each period by adding the product of the default payout and the probability of default ($p$) with the product of the promised payment (coupon payments and repayment of principal) and the probability of not defaulting ($1-p$). One reason for any differences between historical and market-implied default probabilities is that historical default probabilities do not include the default risk premium associated with uncertainty over the timing of possible default loss.\n",
     "\n",
     "The model used here is very sensitive to the discount and recovery rates selected. For simplicity, we assume a flat government bond yield curve, but it could be upward or downward sloping. A more sophisticated and realistic model of the discount rates would require that they be calculated sequentially by a process known as “bootstrapping.” We also assume in this example that the recovery rate is 40%, but another possibility is to change the assumed recovery rate to either 30% or 60% of exposure. Another simplifying assumption is that recovery is instantaneous. In practice, lengthy time delays can occur between the event of default and eventual recovery of cash. Notice that we assume that the recovery rate applies to interest as well as principal.\n",
     "\n",
