--- a/module-6/lesson-3/Financial_Data_Module_6_Lesson_3.ipynb
+++ b/module-6/lesson-3/Financial_Data_Module_6_Lesson_3.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "As mentioned the TA (technical analysis) repo already provides the code for so much of the technical analysis that we might want to do. [Read more about TA here.](https://github.com/bukosabino/ta)\n",
     "\n",
-    "Install the TA library and download the `datas.csv`, which is just price and volume data. The next few blocks of code calculate each of the 42 indicators supported by the repo. In the following sections, we will take a close look at a few of the indicators related to trend and momentum.\n",
+    "Install the `TA` library and download the `datas.csv`, which is just price and volume data. The next few blocks of code calculate each of the 42 indicators supported by the repo. In the following sections, we will take a close look at a few of the indicators related to trend and momentum.\n",
     "\n",
     "The required reading, \"Technical Analysis,\" 1-8, will give you a good overview of technical analysis, its history, and how it can be used. \n",
     "Also required reading are the sections of this text that relate to the indicators discussed below: ADX (Average Directional Index), MACD (Moving Average Convergence/Divergence), Parabolic SAR (Stop And Reverse), RSI (Relative Strength Index), and the Stochastic Oscillator.\n"
@@ -90,18 +90,7 @@
     "from ta import add_all_ta_features\n",
     "from ta.utils import dropna\n",
     "\n",
-    "mpl.style.use(\"seaborn\")\n",
-    "\n",
-    "# Load data\n",
-    "df = pd.read_csv(\"data/ta-test-data.csv.gz\", sep=\",\")\n",
-    "\n",
-    "# Clean NaN values\n",
-    "df = dropna(df)\n",
-    "\n",
-    "# Add all ta features\n",
-    "df = add_all_ta_features(\n",
-    "    df, open=\"Open\", high=\"High\", low=\"Low\", close=\"Close\", volume=\"Volume_BTC\"\n",
-    ")"
+    "mpl.style.use(\"seaborn\")"
    ]
   },
   {
@@ -117,7 +106,18 @@
    },
    "outputs": [],
    "source": [
-    "df.head()  # Check to make sure we"
+    "# Load data\n",
+    "df = pd.read_csv(\"data/ta-test-data.csv.gz\", sep=\",\")\n",
+    "\n",
+    "# Clean NaN values\n",
+    "df = dropna(df)\n",
+    "\n",
+    "# Add all ta features\n",
+    "df = add_all_ta_features(\n",
+    "    df, open=\"Open\", high=\"High\", low=\"Low\", close=\"Close\", volume=\"Volume_BTC\"\n",
+    ")\n",
+    "\n",
+    "df.head()  # Check to make sure"
    ]
   },
   {
@@ -137,7 +137,7 @@
     "id": "3rFnXNLbdgV4"
    },
    "source": [
-    "Average Directional Index (ADI) is a standard trend indicator. Read about it [in the required reading](https://www.mrao.cam.ac.uk/~mph/Technical_Analysis.pdf (102)). Although we have already imported the TA library, find the code for the `ADXIndicator` class below for ease of reference. <br>"
+    "Average Directional Index (ADI) is a standard trend indicator. Read about it [in the required reading](https://www.mrao.cam.ac.uk/~mph/Technical_Analysis.pdf (102)). Although we have already imported the `TA` library, find the code for the `ADXIndicator()` class below for ease of reference."
    ]
   },
   {
@@ -344,7 +344,8 @@
    },
    "source": [
     "Let's see if the guidelines from the \"Technical Analysis\" text suggest a winning strategy here: <br>\n",
-    "\"Generally, ADX readings below 20 indicate trend weakness, and readings above 40 indicate trend strength. An extremely strong trend is indicated by readings above 50.\" <br>\n",
+    "\"Generally, ADX readings below 20 indicate trend weakness, and readings above 40 indicate trend strength. An extremely strong trend is indicated by readings above 50.\"\n",
+    "\n",
     "As a simplistic assessment of this indicator, take a minute to visually inspect the graph and note whether buying or selling (depending on the direction of the trend at the time) appears to be a profitable strategy. Where does the black ADX line cross, say, 50 (on the right-hand side y-axis) just before a steep increase or decrease in the price (the green line)? Certainly, a strategy that involved buying the stock given the peak ADX (about 75) just after 46200 would have performed well if it was held until ADX declined again to 25 (at about 46250). Similarly, the next time that ADX surpassed 50 (at around 46480) would have been a good time to buy, and when ADX got as low as 25, that would have been a good time to sell. This visual thought experiment is far from scientific, but it should give you a sense for how a trend indicator can be used.\n"
    ]
   },
@@ -363,9 +364,9 @@
     "id": "N2JcmrH0mPLr"
    },
    "source": [
-    "As you study the required reading about Moving Average Convergence/Divergence (MACD) in \"Technical Analysis\" (104-108), ensure you understand how to compute and interpret it. <br>\n",
-    "Again, the code from the TA library for the MACD class is provided below for your reference. \n",
-    "\n"
+    "As you study the required reading about Moving Average Convergence/Divergence (MACD) in \"Technical Analysis\" (104-108), ensure you understand how to compute and interpret it.\n",
+    "\n",
+    "Again, the code from the `TA` library for the MACD class is provided below for your reference. \n"
    ]
   },
   {
@@ -480,10 +481,7 @@
     "id": "611tMyCEVrSi"
    },
    "source": [
-    "\n",
-    "\n",
-    "As you read through the code above, make sure you understand how the code works and how to use the built-in functions. For example, [see this required reading to ensure you are familiar with the built-in function \"enumerate.\"](https://www.w3resource.com/python/built-in-function/enumerate.php)\n",
-    "\n"
+    "As you read through the code above, make sure you understand how the code works and how to use the built-in functions. For example, [see this required reading](https://www.w3resource.com/python/built-in-function/enumerate.php) to ensure you are familiar with the built-in function \"enumerate.\n"
    ]
   },
   {
@@ -502,13 +500,13 @@
    },
    "source": [
     "\n",
-    "[Watch this required reading video about parabolic SAR (which we discussed in passing in Financial Markets)](https://www.youtube.com/watch?v=kFTcvDsU1ik)\n",
+    "[Watch this required reading video](https://www.youtube.com/watch?v=kFTcvDsU1ik) about parabolic SAR (which we discussed in passing in Financial Markets.\n",
     "\n",
-    "[Watch this required reading video about how all three of these trend indicators (ADX, MACD, and parabolic SAR) can be used together](https://www.youtube.com/watch?v=hCo9ax0W2Bw)\n",
+    "[Watch this required reading video](https://www.youtube.com/watch?v=hCo9ax0W2Bw) about how all three of these trend indicators (ADX, MACD, and parabolic SAR) can be used together.\n",
     "\n",
-    "[Watch this required reading video about relative strength index (RSI)](https://www.youtube.com/watch?v=01spTWPsRNY)\n",
+    "[Watch this required reading video](https://www.youtube.com/watch?v=01spTWPsRNY) about relative strength index (RSI).\n",
     "\n",
-    "[Watch this required reading video about the stochastic oscillator](https://www.youtube.com/watch?v=bb9ms3fUK7k)"
+    "[Watch this required reading video](https://www.youtube.com/watch?v=bb9ms3fUK7k) about the stochastic oscillator."
    ]
   },
   {
@@ -519,7 +517,7 @@
    "source": [
     "## 5. Conclusion\n",
     "\n",
-    "We just used some interesting functions to calculate different metrics that might contain information about when to buy or sell a security. These indicators were based exclusively on current and previous prices--without any other information about the stock or the company. In the next lesson, we do take into account data that is specific to the companies we are investigating. This is generally financial data that is available from the financial statements, in addition to the current stock price. That is, we are moving from technical analysis to fundamental analysis."
+    "We just used some interesting functions to calculate different metrics that might contain information about when to buy or sell a security. These indicators were based exclusively on current and previous prices -- without any other information about the stock or the company. In the next lesson, we do take into account data that is specific to the companies we are investigating. This is generally financial data that is available from the financial statements, in addition to the current stock price. That is, we are moving from technical analysis to fundamental analysis."
    ]
   },
   {
