--- a/module-1/lesson-2/Financial_Data_Module_1_Lesson_2.ipynb
+++ b/module-1/lesson-2/Financial_Data_Module_1_Lesson_2.ipynb
@@ -107,16 +107,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
    "outputs": [],
    "source": [
-    "# Let's use the investpy package to get Argentinian bond data.\n",
+    "# Example code on how to use the investpy package to get Argentinian bond data.\n",
     "import investpy\n",
     "\n",
     "data = investpy.get_bond_historical_data(\n",
     "    bond=\"Argentina 3Y\", from_date=\"01/01/2018\", to_date=\"31/12/2021\"\n",
     ")\n",
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Disclaimer**: \n",
+    "`investpy` is not working fine currently due to some changes in [Investing.com](https://www.investing.com/) APIs and author is working to fix it. For the purpose of understanding lesson 2, please visit [Argentina 3-Year Bond Historical Data - Investing.com](https://www.investing.com/rates-bonds/argentina-3-year-bond-yield-historical-data) and download data directly for now. The code will be updated as soon as package update is released.\n",
+    "\n"
    ]
   },
   {
@@ -265,7 +278,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "817572e4",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -299,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
