--- a/module-1/lesson-4/Financial_Data_Module_1_Lesson_4.ipynb
+++ b/module-1/lesson-4/Financial_Data_Module_1_Lesson_4.ipynb
@@ -45,7 +45,7 @@
     "id": "fiMt0VC6sPN5"
    },
    "source": [
-    "*When you are in a shopping mall or airport terminal, you walk up to the information kiosk to find a map that says “You are here.”  If we were to do so in the world of data, what would the map look like?  As financial engineers, where are we in the vast world of data? There is time series data, survey data, economic data, alternative data, big data. This lesson will attempt to answer that by examining data from the financial engineering perspective to the machine learning perspective. We’ll begin by looking at desirable features of data.*"
+    "*When you are in a shopping mall or airport terminal, you walk up to the information kiosk to find a map that says “You are here.”  If we were to do so in the world of data, what would the map look like?  As financial engineers, where are we in the vast world of data? There is time series data, survey data, economic data, alternative data, big data. This lesson will attempt to answer that by examining data from the financial engineering perspective to the machine learning perspective. We'll begin by looking at desirable features of data.*"
    ]
   },
   {
@@ -192,11 +192,63 @@
    "outputs": [],
    "source": [
     "# Let's look at a few fundamentals on Uber.\n",
-    "ticker = \"UBER\"\n",
-    "UberFundamentals = yf.Ticker(ticker)\n",
-    "print(UberFundamentals.info.keys())\n",
-    "print(UberFundamentals.info[\"freeCashflow\"])\n",
-    "print(UberFundamentals.info[\"priceToBook\"])"
+    "from yahooquery import Ticker\n",
+    "\n",
+    "uber = Ticker(\"UBER\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uber.asset_profile  # Uber profile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uber.financial_data  # Uber financial data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uber.key_stats  # Uber KPIs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uber.balance_sheet()  # Uber Balance Sheet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uber.cash_flow(trailing=False)  # Uber Cask Flow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uber.income_statement()  # Uber Income Statement"
    ]
   },
   {
@@ -258,7 +310,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8054807e",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -292,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
