--- a/module-3/lesson-3/Financial_Data_Module_3_Lesson_3.ipynb
+++ b/module-3/lesson-3/Financial_Data_Module_3_Lesson_3.ipynb
@@ -48,8 +48,12 @@
     "import datetime\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "import pandas_datareader.data as web\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import yfinance as yfin\n",
+    "\n",
+    "yfin.pdr_override()"
    ]
   },
   {
@@ -107,7 +111,8 @@
     "start = datetime.date(2006, 1, 1)\n",
     "end = datetime.date(2021, 11, 28)\n",
     "# end = datetime.date.today()\n",
-    "prices = web.DataReader([\"XLF\"], \"yahoo\", start, end)[\"Adj Close\"]\n",
+    "prices = pd.DataFrame(web.DataReader([\"XLF\"], start, end)[\"Adj Close\"])\n",
+    "prices = prices.rename(columns={\"Adj Close\": \"XLF\"})\n",
     "prices = prices.dropna()"
    ]
   },
@@ -122,7 +127,7 @@
     "\n",
     "# plot a simple time series plot\n",
     "# using seaborn.lineplot()\n",
-    "sns.lineplot(x=\"Date\", y=\"XLF\", data=prices, label=\"Daily XLF 500 Prices\")"
+    "sns.lineplot(x=\"Date\", y=\"XLF\", data=prices, label=\"Daily XLF 500 Prices\");"
    ]
   },
   {
@@ -139,7 +144,7 @@
    "outputs": [],
    "source": [
     "drawdown = (\n",
-    "    prices[\"2006-01-01\":\"2010-01-01\"].min() - prices[\"2006-01-01\":\"2010-01-01\"].max()\n",
+    "    prices[\"2006-01-01\":\"2010-01-01\"].max() - prices[\"2006-01-01\":\"2010-01-01\"].min()\n",
     ") / prices[\"2006-01-01\":\"2010-01-01\"].max()\n",
     "100 * drawdown.round(3)"
    ]
@@ -210,7 +215,7 @@
     "\n",
     "How much money do we have in our account at the end of the year assuming the expense ratio wasn't taken out yet? \n",
     "\n",
-    "We can calculate the cost per share using the final value at the end of the year -- \\\\$6,000\n"
+    "We can calculate the cost per share using the final value at the end of the year - \\\\$6,000\n"
    ]
   },
   {
@@ -273,7 +278,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db444e13",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -302,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
