--- a/module-4/lesson-4/Financial_Data_Module_4_Lesson_4.ipynb
+++ b/module-4/lesson-4/Financial_Data_Module_4_Lesson_4.ipynb
@@ -80,7 +80,8 @@
     "import opstrat as op\n",
     "import pandas as pd\n",
     "import pandas_datareader as pdr\n",
-    "from optionprice import Option"
+    "from optionprice import Option\n",
+    "from yahoo_fin import options"
    ]
   },
   {
@@ -96,11 +97,16 @@
     "# Alpha vintage\n",
     "myApiKey = \"O2ZMKAVEVDVQ4RWF\"\n",
     "\n",
-    "ts = pdr.av.time_series.AVTimeSeriesReader(\"NFLX\", api_key=myApiKey)\n",
+    "# original ts alphavantage premium endpoint that no longer works\n",
+    "# ts = pdr.av.time_series.AVTimeSeriesReader(\"NFLX\", api_key=myApiKey)\n",
+    "# so we will use following which forces free function\n",
+    "ts = pdr.av.time_series.AVTimeSeriesReader(\n",
+    "    \"NFLX\", function=\"TIME_SERIES_DAILY_ADJUSTED\", api_key=myApiKey\n",
+    ")\n",
     "df = ts.read()\n",
     "df.index = pd.to_datetime(df.index, format=\"%Y-%m-%d\")\n",
     "# plotting the opening and closing value\n",
-    "df[[\"close\"]].plot()"
+    "df[[\"close\"]].plot();"
    ]
   },
   {
@@ -352,23 +358,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nflx_dates = options.get_expiration_dates(\"nflx\")\n",
+    "print(len(nflx_dates))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "Ib1-qh8D4AWr",
     "outputId": "dbc83232-5afe-4623-f2a2-5618a58b0986"
    },
    "outputs": [],
    "source": [
-    "from yahoo_fin import options\n",
-    "\n",
-    "nflx_dates = options.get_expiration_dates(\"nflx\")\n",
-    "print(len(nflx_dates))\n",
-    "\n",
     "try:\n",
     "    callsNflx = options.get_calls(\"nflx\")\n",
     "except:  # noQA E722\n",
+    "    # to load data from local file in case of any disruptions\n",
     "    callsNflx = pd.read_csv(\"nflx_calls.csv\")\n",
     "\n",
-    "    list(callsNflx.columns)"
+    "list(callsNflx.columns)"
    ]
   },
   {
@@ -406,8 +418,8 @@
     "nflxCall1 = Option(\n",
     "    european=True, kind=\"call\", s0=333, k=340, t=4, sigma=0.573, r=0.0, dv=0\n",
     ")\n",
-    "nflxOpt1 = round(nflxCall1.getPrice(), 4)\n",
-    "round(nflxOpt1 * 100, 2)"
+    "nflxOpt1 = round(nflxCall1.getPrice() * 100, 2)\n",
+    "nflxOpt1"
    ]
   },
   {
@@ -419,8 +431,7 @@
    },
    "outputs": [],
    "source": [
-    "# The option will cost 100 times this, or $503.\n",
-    "nflxOpt1 = 503\n",
+    "# Number of options we can buy\n",
     "numCallOptions = BuyShares(myCapital, nflxOpt1)\n",
     "numCallOptions"
    ]
@@ -446,8 +457,8 @@
     "nflxCall2 = Option(\n",
     "    european=True, kind=\"call\", s0=345, k=340, t=4, sigma=0.573, r=0.0, dv=0\n",
     ")\n",
-    "nflxOpt2 = round(nflxCall2.getPrice(), 4)\n",
-    "round(nflxOpt2 * 100, 2)"
+    "nflxOpt2 = round(nflxCall2.getPrice() * 100, 2)\n",
+    "nflxOpt2"
    ]
   },
   {
@@ -462,10 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "vSH4Qeyl4AWs",
-    "outputId": "f5969050-ffeb-4c3c-ab73-86c87626b69f"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "optPnL = CalculatePnL(nflxOpt2, nflxOpt1, numCallOptions)\n",
@@ -524,11 +532,13 @@
     "nflxCall1 = Option(\n",
     "    european=True, kind=\"call\", s0=333, k=340, t=4, sigma=0.573, r=0.0, dv=0\n",
     ")\n",
-    "nflxOpt1 = round(nflxCall1.getPrice(), 4)\n",
+    "nflxOpt1 = round(nflxCall1.getPrice() * 100, 2)\n",
+    "\n",
     "nflxCall2 = Option(\n",
     "    european=True, kind=\"call\", s0=333, k=350, t=4, sigma=0.573, r=0.0, dv=0\n",
     ")\n",
-    "nflxOpt2 = round(nflxCall2.getPrice(), 4)\n",
+    "nflxOpt2 = round(nflxCall2.getPrice() * 100, 2)\n",
+    "\n",
     "print([nflxOpt1, nflxOpt2])\n",
     "nflxSpr1 = nflxOpt1 - nflxOpt2"
    ]
@@ -579,8 +589,8 @@
    },
    "outputs": [],
    "source": [
-    "# The option will cost 100 times this, or $269.73\n",
-    "nflxOptB = (nflxOpt1 - nflxOpt2) * 100\n",
+    "# Number of spread options\n",
+    "nflxOptB = nflxOpt1 - nflxOpt2\n",
     "numSpreadOptions = BuyShares(myCapital, nflxOptB)\n",
     "numSpreadOptions"
    ]
@@ -597,11 +607,13 @@
     "nflxCall3 = Option(\n",
     "    european=True, kind=\"call\", s0=345, k=340, t=4, sigma=0.573, r=0.0, dv=0\n",
     ")\n",
-    "nflxOpt3 = round(nflxCall3.getPrice(), 4)\n",
+    "nflxOpt3 = round(nflxCall3.getPrice() * 100, 2)\n",
+    "\n",
     "nflxCall4 = Option(\n",
     "    european=True, kind=\"call\", s0=345, k=350, t=4, sigma=0.573, r=0.0, dv=0\n",
     ")\n",
-    "nflxOpt4 = round(nflxCall4.getPrice(), 4)\n",
+    "nflxOpt4 = round(nflxCall4.getPrice() * 100, 2)\n",
+    "\n",
     "print([nflxOpt3, nflxOpt4])\n",
     "nflxSpr2 = nflxOpt3 - nflxOpt4"
    ]
@@ -615,7 +627,7 @@
    },
    "outputs": [],
    "source": [
-    "sprPnL = CalculatePnL(nflxSpr2, nflxSpr1, numCallOptions)\n",
+    "sprPnL = CalculatePnL(nflxSpr2, nflxSpr1, numSpreadOptions)\n",
     "sprPnL"
    ]
   },
@@ -646,10 +658,10 @@
     "id": "698xG9CF4AWt"
    },
    "source": [
-    "Stock              3.6%\n",
-    "Financed Stock     7.2%\n",
-    "Call Option       117.4%\n",
-    "Bull Spread       43.5%     \n",
+    "Stock              3.6%  </br>\n",
+    "Financed Stock     7.2%  </br>\n",
+    "Call Option       116.94%  </br>\n",
+    "Bull Spread       80.9%   </br>\n",
     "\n",
     "Keep in mind that these options expire in four days.\n",
     "If the price does not move that much in a short time, we stand to lose 100% of the option investment. This is extremely risky.\n",
@@ -714,7 +726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
