--- a/module-6/lesson-1/Financial_Data_Module_6_Lesson_1.ipynb
+++ b/module-6/lesson-1/Financial_Data_Module_6_Lesson_1.ipynb
@@ -59,7 +59,7 @@
     "## 1. The Twitter API\n",
     "API stands for application programming interface. An API is how one computer or program \"interfaces\" or interacts with another computer or program. That means it is also how we users interface with computers or programs. The Twitter API is how we users (use the Python noteboooks on our computers to) interface with the Twitter database of tweets.\n",
     "\n",
-    "* Go to Twitter.com and get a Twitter account if you don't have one yet.\n",
+    "* Go to [Twitter.com](https://twitter.com/?lang=en) and get a Twitter account if you don't have one yet.\n",
     "* Sign in to the developer site [https://developer.twitter.com/en](https://developer.twitter.com/en) using your Twitter account\n",
     "* Now you need to register as an applications (app) developer\n",
     "* Go to [https://apps.twitter.com/app/new](https://apps.twitter.com/app/new) \n",
@@ -72,15 +72,15 @@
     "* Scroll down and click \"Generate Access key and Secret\"\n",
     "* Copy the two access keys to the text file\n",
     "\n",
-    "NOTE: With this free Twitter API v2, you will get an error unless your search dates are within the last seven days. Also, you can only download 500,000 tweets per month. For this reason, be conservative and restrict your start and end times, especially if you are investigating tweets for very well-known companies, like AAPL (Apple) and GOOG (Alphabet / Google). Just a 30-minute block of time (the difference between start time and end time is 30 minutes) is actually sufficient to do some exploratory analysis on such large companies. Much smaller companies may require several hours or even days. \n",
+    "**NOTE:** With this free Twitter API v2, you will get an error unless your search dates are within the last seven days. Also, you can only download 500,000 tweets per month. For this reason, be conservative and restrict your start and end times, especially if you are investigating tweets for very well-known companies, like AAPL (Apple) and GOOG (Alphabet / Google). Just a 30-minute block of time (the difference between start time and end time is 30 minutes) is actually sufficient to do some exploratory analysis on such large companies. Much smaller companies may require several hours or even days. \n",
     "\n",
-    "Note too that using the client.sample() method does not count against the 500K tweet limit. These tweets may not include a reference to the company you are investigating, but it could still be interesting. Once downloaded, you can also filter these tweets for whatever interests you.\n",
+    "Note too that using the `client.sample()` method does not count against the 500K tweet limit. These tweets may not include a reference to the company you are investigating, but it could still be interesting. Once downloaded, you can also filter these tweets for whatever interests you.\n",
     "\n",
-    "Twarc is a library that will make it a lot easier for us to search and access Twitter through its API. [For more background on Twarc, see this site,](https://twarc-project.readthedocs.io/en/latest/twarc2_en_us/) [and this site.](https://github.com/DocNow/twarc/blob/4bff06bb8f2e279ea0a2064d6bfaec3c9b4b3aff/docs/api/library.md)\n",
+    "`Twarc` is a library that will make it a lot easier for us to search and access Twitter through its API. For more background on `Twarc`, see [this site](https://twarc-project.readthedocs.io/en/latest/twarc2_en_us/) and [this site](https://github.com/DocNow/twarc/blob/4bff06bb8f2e279ea0a2064d6bfaec3c9b4b3aff/docs/api/library.md).\n",
     "\n",
-    "Note from the documentation above that Twarc is a command line tool, but we have adapted it with [this code](https://github.com/twitterdev/getting-started-with-the-twitter-api-v2-for-academic-research/blob/f3b5b40d197ecaac133299eea46fefcced569d21/modules/6b-labs-code-standard-python.md) to run from a notebook as part of a function we define. \n",
+    "Note from the documentation above that `Twarc` is a command line tool, but we have adapted it with [this code](https://github.com/twitterdev/getting-started-with-the-twitter-api-v2-for-academic-research/blob/f3b5b40d197ecaac133299eea46fefcced569d21/modules/6b-labs-code-standard-python.md) to run from a notebook as part of a function we define. \n",
     "\n",
-    "You will notice the reference to JSON objects. Luckily, we use Twarc to convert these into a `DataFrame`. Still, in the next section, you will need to become more familiar with JSON objects given how prevalent they are as a data type.  "
+    "You will notice the reference to JSON objects. Luckily, we use `Twarc` to convert these into a `DataFrame`. Still, in the next section, you will need to become more familiar with JSON objects given how prevalent they are as a data type.  "
    ]
   },
   {
@@ -90,7 +90,6 @@
    "outputs": [],
    "source": [
     "from IPython.display import VimeoVideo\n",
-    "\n",
     "VimeoVideo(\"714293481\", h=\"e42c792a9e\", width=600)"
    ]
   },
@@ -117,7 +116,7 @@
    },
    "source": [
     "\n",
-    "The NRCLex library measures the emotion or \"affect\" in a piece of text, so we will use it for the actual sentiment analysis in this program.\n",
+    "The `NRCLex` library measures the emotion or \"affect\" in a piece of text, so we will use it for the actual sentiment analysis in this program.\n",
     "[Find more background on the NRCLex library you will be using here.](https://pypi.org/project/NRCLex/)\n",
     "\n",
     "And [here is information about another similar approach to sentiment analysis.](https://www.digitalocean.com/community/tutorials/how-to-perform-sentiment-analysis-in-python-3-using-the-natural-language-toolkit-nltk)\n",
@@ -143,7 +142,6 @@
     "Read these required readings for an introduction to JSON: <br>\n",
     "https://www.geeksforgeeks.org/javascript-json/ <br>\n",
     "https://www.geeksforgeeks.org/json-data-types/ <br>\n",
-    "<br>\n",
     "\n",
     "For the information you need about using JSON in Python, see this page of required reading:<br>\n",
     "https://www.geeksforgeeks.org/python-json/?ref=lbp <br>\n",
@@ -153,7 +151,6 @@
     "https://www.geeksforgeeks.org/append-to-json-file-using-python/?ref=lbp <br>\n",
     "https://www.geeksforgeeks.org/serializing-json-data-in-python/?ref=lbp <br>\n",
     "https://www.geeksforgeeks.org/deserialize-json-to-object-in-python/?ref=lbp <br>\n",
-    "<br>\n",
     "\n",
     "See also these (required reading) pages for clarification of the JSON related methods. <br>\n",
     "https://www.geeksforgeeks.org/json-load-in-python/ <br>\n",
@@ -176,11 +173,11 @@
    },
    "outputs": [],
    "source": [
-    "from datetime import datetime, timezone\n",
-    "\n",
     "import nltk\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
+    "\n",
+    "from datetime import datetime, timezone\n",
     "from nrclex import NRCLex\n",
     "from twarc import Twarc2\n",
     "from twarc_csv import DataFrameConverter\n",
@@ -196,7 +193,8 @@
    },
    "outputs": [],
    "source": [
-    "Bearer_Token = \"XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\"  # Replace the Xs with your new bearer token from the Twitter development site."
+    "# Replace the Xs with your new bearer token from the Twitter development site.\n",
+    "Bearer_Token = \"XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\"  "
    ]
   },
   {
@@ -268,7 +266,7 @@
     "query = \"AAPL lang:en\"\n",
     "\n",
     "# Specify the start and end times in UTC for the time period you want Tweets from\n",
-    "# These dates and times must be within the past week!\n",
+    "''' These dates and times must be within the past week! '''\n",
     "start_time = datetime(2022, 4, 20, 0, 0, 0, 0, timezone.utc)\n",
     "end_time = datetime(2022, 4, 20, 1, 0, 0, 0, timezone.utc)\n",
     "\n",
@@ -326,11 +324,11 @@
    "source": [
     "A very simplistic approach to sentiment analysis might be to buy the stock with the more \"positive\" emotion counts.\n",
     "\n",
-    "Alternatively, subtract the negative from the positive for a net positive vs. negative emotion, and buy the stock with the higher of these values--and sell the other one (assuming you are evaluating pairs of stocks).\n",
+    "Alternatively, subtract the negative from the positive for a net positive vs. negative emotion, and buy the stock with the higher of these values -- and sell the other one (assuming you are evaluating pairs of stocks).\n",
     " \n",
-    "Or, you might do some more analysis, looking at historical levels of these values--and buy when there is a significant increase in a particular value.\n",
+    "Or, you might do some more analysis, looking at historical levels of these values -- and buy when there is a significant increase in a particular value.\n",
     "\n",
-    "Which value? And what constitutes significant? You will need to perform a lot of experimentation--testing and backtesting to find your answer.\n"
+    "Which value? And what constitutes significant? You will need to perform a lot of experimentation -- testing and backtesting to find your answer.\n"
    ]
   },
   {
