--- a/module-6/lesson-2/Financial_Data_Module_6_Lesson_2.ipynb
+++ b/module-6/lesson-2/Financial_Data_Module_6_Lesson_2.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "*In the last lesson, we downloaded batches of data using an API and analyzed it for the frequency of various sentiments. In this lesson, we learn about time series analysis and especially moving averages, which includes simple moving averages and exponential moving averages of various kinds. Then, we review the three most used types of correlation (Pearson, Kendall, and Spearman) in preparation for analyzing the correlations among various cryptocurrencies.*\n",
     "\n",
-    "###### These lesson notes are a fork of [this notebook](https://www.kaggle.com/code/dbarkhorn/crypto-correlation/notebook) by Danbarkhorn, which is released under the Apache 2.0 open source license."
+    "##### These lesson notes are a fork of [this notebook](https://www.kaggle.com/code/dbarkhorn/crypto-correlation/notebook) by Danbarkhorn, which is released under the Apache 2.0 open source license."
    ]
   },
   {
@@ -60,10 +60,10 @@
    "source": [
     "## 1. Time Series Analysis and Smoothing \n",
     "\n",
-    "Financial engineering often relies on historical data, so a solid understanding of time series analysis is crucial. Most of what you need to know for this lesson about forecast quality metrics and smoothing techniques will be found [in the required reading (section 1: \"Introduction\" and section 2: \"Move, smoothe, evaluate\").](https://www.kaggle.com/kashnitsky/topic-9-part-1-time-series-analysis-in-python)\n",
+    "Financial engineering often relies on historical data, so a solid understanding of time series analysis is crucial. Most of what you need to know for this lesson about forecast quality metrics and smoothing techniques will be found in the required reading ([section 1: \"Introduction\" and section 2: \"Move, smoothe, evaluate\"](https://www.kaggle.com/kashnitsky/topic-9-part-1-time-series-analysis-in-python)).\n",
     "\n",
     "\n",
-    "Get further information on Double and Triple Exponential Smoothing from [this required reading.](https://online.stat.psu.edu/stat501/node/1001)\n",
+    "Get further information on Double and Triple Exponential Smoothing from [this required reading](https://online.stat.psu.edu/stat501/node/1001).\n",
     "\n",
     "As you will see, moving averages (both exponential and simple moving averages) will come into play in many ways in the later lesson about technical analysis."
    ]
@@ -76,7 +76,7 @@
    "source": [
     "## 2. Correlations\n",
     "\n",
-    "There are different approaches to assessing the strength of the relationship between two variables, and each has its own strengths and weaknesses. [See the following required reading before we calculate the different correlation metrics between cryptocurrencies in the rest of this notebook.](https://www.kaggle.com/kiyoung1027/correlation-pearson-spearman-and-kendall/report)"
+    "There are different approaches to assessing the strength of the relationship between two variables, and each has its own strengths and weaknesses. See the [following required reading](https://www.kaggle.com/kiyoung1027/correlation-pearson-spearman-and-kendall/report) before we calculate the different correlation metrics between cryptocurrencies in the rest of this notebook."
    ]
   },
   {
@@ -227,7 +227,7 @@
    "source": [
     " As previously stated, the goal of this analysis is to create a correlation matrix for these currencies. One way to find correlation between time series is to look at *cross-correlation* of the time series. Cross-correlation is computed between two time series using a lag, so when creating the correlation matrix, (*) we need to specify the correlation as well as the lag.\n",
     " \n",
-    " Before computing the cross-correlation, it is important to have \"wide-sense stationary\" (often just called stationary) data. There are a few ways to make data stationary--one of which is through differencing. But even after this, it is famously difficult to avoid spurious correlations between time series data that are often caused by autocorrelation. See this article for an in-depth analysis of how spurious correlations arise and how to avoid them: [\"Dangers and Uses of Cross-Correlation in Analyzing Time Series in Perception, Performance, Movement, and Neuroscience: The Importance of Constructing Transfer Function Autoregressive Models.\"](https://doi.org/10.3758/s13428-015-0611-2) (This is a free, shareable article, but it is not a required reading.)\n",
+    " Before computing the cross-correlation, it is important to have \"wide-sense stationary\" (often just called stationary) data. There are a few ways to make data stationary -- one of which is through differencing. But even after this, it is famously difficult to avoid spurious correlations between time series data that are often caused by autocorrelation. See this article for an in-depth analysis of how spurious correlations arise and how to avoid them: [\"Dangers and Uses of Cross-Correlation in Analyzing Time Series in Perception, Performance, Movement, and Neuroscience: The Importance of Constructing Transfer Function Autoregressive Models.\"](https://doi.org/10.3758/s13428-015-0611-2) (This is a free, shareable article, but it is not a required reading.)\n",
     " \n",
     "For now, (*) we will employ daily differencing (as it is not seasonal) and test for stationarity to prepare for cross-correlation testing."
    ]
@@ -283,7 +283,7 @@
     "id": "gxqjh0QYNKOC"
    },
    "source": [
-    "Note:\n",
+    "**Note:**\n",
     "Here we see that one of the coins (Bitcoin) has much larger spikes than the other coins. While this may still have given us stationarity, it may be useful to also look at the percentage change per day of the time series."
    ]
   },
@@ -374,27 +374,24 @@
    "source": [
     "## 4. Stationarity\n",
     "\n",
-    "You will learn all about stationarity in the Econometrics course. In short, the mean and variance of a stationary series does not change over time. You will not be quizzed on stationarity per se in this lesson, but read through this section so that you will have been exposed to the concept by the time you get to Econometrics--and because we should perform these tests on our Bitcoin data anyway.\n",
-    "<br>\n",
+    "You will learn all about stationarity in the Econometrics course. In short, the mean and variance of a stationary series does not change over time. You will not be quizzed on stationarity per se in this lesson, but read through this section so that you will have been exposed to the concept by the time you get to Econometrics -- and because we should perform these tests on our Bitcoin data anyway.\n",
     "\n",
     "We can test for stationarity by using *unit root tests*. One of which is the Augmented Dickey-Fuller Test. Dickey Fuller utilizes the following regression.\n",
     "\n",
-    "$$ Y'_t \\space = \\space \\phi Y_{t-1} \\space + \\space b_1 Y'_{t-1} \\space + \\space b_2 Y'_{t-2} \\space +...+ \\space b_p Y'_{t-p} $$\n",
-    "$$ $$\n",
-    "$$ Y'_t \\space = \\space Y_t \\space - \\space Y_{t-1} $$\n",
+    "$$Y'_t = \\phi Y_{t-1} + b_1 Y'_{t-1} + b_2 Y'_{t-2} + \\dots + b_p Y'_{t-p}$$\n",
+    "\n",
+    "$$Y'_t = Y_t - Y_{t-1}$$\n",
     "\n",
     "Using the Augmented Dickey Fuller test, we look at the following statistic.\n",
     "\n",
-    "$$ DF_t \\space = \\space \\frac{\\hat{\\phi}}{SE(\\hat{\\phi})} $$\n",
+    "$$DF_t = \\frac{\\hat{\\phi}}{SE(\\hat{\\phi})}$$\n",
     "\n",
     "Then, this statistic is compared to a table given by Dickey Fuller. Given the number of samples, we can guess with a % certainty whether or not our data is stationary.\n",
     "\n",
-    "$$ H_{0} \\space : data \\space is \\space nonstationary $$\n",
-    "$$ H_{A} \\space : data \\space is \\space stationary $$\n",
+    "$$H_{0}: \\text{data is nonstationary}$$\n",
+    "$$H_{A}: \\text{data is stationary}$$\n",
     "\n",
-    "To check these hypotheses, we look at the p-value of our given statistic (*) [using a table](https://www.real-statistics.com/statistics-tables/augmented-dickey-fuller-table/). In the table, we look at model 1 (the middle table) with 250 < n < 500. From here, we can see that in order to know with 1% certainty whether or not our data is stationary, we can compare our 𝐷𝐹𝑡 statistic to the values -3.457 and -3.443. Since our calculated values are less than these critical values from the table, we have a significant result, i.e., our time series are stable.\n",
-    "\n",
-    "[^@#$%]"
+    "To check these hypotheses, we look at the p-value of our given statistic (\\*) [using a table](https://www.real-statistics.com/statistics-tables/augmented-dickey-fuller-table/). In the table, we look at model 1 (the middle table) with 250 < n < 500. From here, we can see that in order to know with 1% certainty whether or not our data is stationary, we can compare our $DF_t$ statistic to the values -3.457 and -3.443. Since our calculated values are less than these critical values from the table, we have a significant result, i.e., our time series are stable.\n"
    ]
   },
   {
@@ -446,7 +443,7 @@
     "**Note:**\n",
     "Here we see that our data is very stationary. This is clear because of the extremely low p-values. \n",
     "\n",
-    "It is important here to note there are other ways to detrend other than looking at differenced data or percent change. However, some of these methods would not have proven fruitful for this dataset. Take, for example, using the residuals of this data based on a simple linear regression. This can be easily done using scikit learn's linear regression tool."
+    "It is important here to note there are other ways to detrend other than looking at differenced data or percent change. However, some of these methods would not have proven fruitful for this dataset. Take, for example, using the residuals of this data based on a simple linear regression. This can be easily done using `scikit learn`'s linear regression tool."
    ]
   },
   {
@@ -495,7 +492,7 @@
     "id": "E5ls8lJXNKOK"
    },
    "source": [
-    "And finally, the actual correlations analysis. We use scipy's correlate function. The cross-correlation will tell us if we should lag one of the series. Cross-correlation is often used in signal processing to match signals."
+    "And finally, the actual correlations analysis. We use `scipy`'s correlate function. The cross-correlation will tell us if we should lag one of the series. Cross-correlation is often used in signal processing to match signals."
    ]
   },
   {
@@ -691,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
