--- a/module-6/lesson-4/Financial_Data_Module_6_Lesson_4.ipynb
+++ b/module-6/lesson-4/Financial_Data_Module_6_Lesson_4.ipynb
@@ -57,13 +57,9 @@
    "source": [
     "## 1. Fundamental Analysis\n",
     "\n",
-    "We discussed fundamental analysis in Module 6, Lesson 4 of Financial Markets. [The following required reading goes both deeper and more broadly into various metrics and ratios](https://pressbooks.rampages.us/businessfoundation/chapter/12-8/)\n",
+    "We discussed fundamental analysis in Module 6, Lesson 4 of Financial Markets. The following [required reading](https://pressbooks.rampages.us/businessfoundation/chapter/12-8/) goes both deeper and more broadly into various metrics and ratios.\n",
     "\n",
-    "\n",
-    "In order to use the library, [you will need to register for an API key here](https://www.alphavantage.co/support/#api-key), which is very similar to what you needed to access the Twitter API in Lesson 1 of this module:<\n",
-    "\n",
-    "\n",
-    "Then, set the value of api_key in the next line of code to this key string value that you received.\n"
+    "In order to use the library, you will need to [register for an API key here](https://www.alphavantage.co/support/#api-key), which is very similar to what you needed to access the Twitter API in Lesson 1 of this module. Then, set the value of `api_key` in the next line of code to this key string value that you received.\n"
    ]
   },
   {
@@ -74,7 +70,8 @@
    },
    "outputs": [],
    "source": [
-    "api_key = \"XXXXXXXXXXXXXXXX\"  # Paste your API key from https://www.alphavantage.co/support/#api-key between the quotes"
+    "# Paste your API key from https://www.alphavantage.co/support/#api-key between the quotes\n",
+    "api_key = \"XXXXXXXXXXXXXXXX\"  "
    ]
   },
   {
@@ -83,11 +80,9 @@
     "id": "-A-byfxztaJL"
    },
    "source": [
-    "Now you can use any of the specific data sets listed below (OVERVIEW, EARNINGS\n",
-    "CASH_FLOW, BALANCE_SHEET, INCOME_STATEMENT) to find the financial statement information or fundamental analysis metric of interest. By default, the data set is set to \"OVERVIEW\" which already includes several of the ratios you will be reading about. With access to the financial statements as provided below, you can also calculate many more financial ratios.\n",
+    "Now you can use any of the specific data sets listed below (OVERVIEW, EARNINGS, CASH_FLOW, BALANCE_SHEET, INCOME_STATEMENT) to find the financial statement information or fundamental analysis metric of interest. By default, the data set is set to \"OVERVIEW\" which already includes several of the ratios you will be reading about. With access to the financial statements as provided below, you can also calculate many more financial ratios.\n",
     "\n",
-    "Set the \"ticker\" to the ticker of your choice. \n",
-    "[Explore the other data fields available to you](https://www.alphavantage.co/documentation/#balance-sheet)"
+    "Set the \"ticker\" to the ticker of your choice. Explore [the other data fields](https://www.alphavantage.co/documentation/#balance-sheet) available to you."
    ]
   },
   {
@@ -103,20 +98,12 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "\n",
     "import requests\n",
     "\n",
     "# Update these two values according to what you are looking for\n",
     "ticker = \"MSFT\"\n",
-    "data_set = \"OVERVIEW\"\n",
+    "data_set = \"OVERVIEW\"  # or try 'EARNINGS', 'CASH_FLOW', 'BALANCE_SHEET', 'INCOME_STATEMENT'\n",
     "\n",
-    "\"\"\"\n",
-    "For data_set values you can choose from any of the following:\n",
-    "EARNINGS\n",
-    "CASH_FLOW\n",
-    "BALANCE_SHEET\n",
-    "INCOME_STATEMENT\n",
-    "\"\"\"\n",
     "url = (\n",
     "    \"https://www.alphavantage.co/query?function=\"\n",
     "    + data_set\n",
@@ -130,7 +117,7 @@
     "data = r.json()\n",
     "\n",
     "print(data)\n",
-    "\n",
+    "print()\n",
     "print(json.dumps(data, indent=1))"
    ]
   },
@@ -140,7 +127,7 @@
     "id": "JU_uUjgA3rLg"
    },
    "source": [
-    "[This required reading has a great discussion about using financial analysis and fundamental analysis in the real world](https://www.scirp.org/html/8-1501685_88850.htm)\n"
+    "[This required reading](https://www.scirp.org/html/8-1501685_88850.htm) has a great discussion about using financial analysis and fundamental analysis in the real world.\n"
    ]
   },
   {
@@ -151,9 +138,9 @@
    "source": [
     "## 2. The Urllib Module \n",
     "\n",
-    "URL stands for uniform resource locator, the unique identifier used to locate a resource on the internet: in other words, a website address. When you look over the code for the FundamentalAnalysis repo, you will recognize the JSON import from Lesson 1. Notice too the references to the Urllib module, which helps our code interact with websites.\n",
+    "URL stands for uniform resource locator, the unique identifier used to locate a resource on the internet: in other words, a website address. When you look over the code for the FundamentalAnalysis repo, you will recognize the JSON import from Lesson 1. Notice too the references to the `Urllib` module, which helps our code interact with websites.\n",
     "\n",
-    "Read the two required readings at the following URLs so you understand more about how the code above uses this Urllib module:\n",
+    "Read the two required readings at the following URLs so you understand more about how the code above uses this `Urllib` module:\n",
     "* [\"What is the urllib module in Python 3?\"](https://www.educative.io/edpresso/what-is-the-urllib-module-in-python-3)\n",
     "* [\"Python Urllib Module\"](https://www.geeksforgeeks.org/python-urllib-module/)\n"
    ]
@@ -166,7 +153,7 @@
    "source": [
     "## 3. Conclusion\n",
     "\n",
-    "In this lesson, we performed fundamental analysis with the help of a repo that does all the relevant calculations. It also uses the Urllib module, which we learned more about. We also used an API (application programming interface), like we did in Lesson 1. In this module, we learned about sentiment analysis, technical analysis, and fundamental analysis. We also focused on time series analysis and correlation in the last lesson.\n",
+    "In this lesson, we performed fundamental analysis with the help of a repo that does all the relevant calculations. It also uses the `Urllib` module, which we learned more about. We also used an API (application programming interface), like we did in Lesson 1. In this module, we learned about sentiment analysis, technical analysis, and fundamental analysis. We also focused on time series analysis and correlation in the last lesson.\n",
     "\n",
     "As we can see in this module, financial engineering techniques, even just those used to forecast stock prices, can be quite varied. In each of these lessons, we have presented a single approach to provide a small sample of the wide-ranging types of analysis that are being pursued, actively developed, and combined in the search for better, more predictive models. This innovative process is both disciplined and creative: IT requires sufficient understanding and command of the domain knowledge (for example, regarding the specific markets) and technical knowledge (the quantitative and coding techniques). This knowledge is necessary for improving existing techniques, borrowing techniques from other fields to apply to the market or some other financial topic, or a novel combination of both of these in a thoughtful new approach."
    ]
@@ -226,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
